--- a/section-07.adoc
+++ b/section-07.adoc
@@ -13,20 +13,24 @@ operationally — if not materially.
 [#7_1] 
 === THE MECHANICS OF INITIATIVE
 
-[#7_11]*[7.11]* The Player who has "Initiative" for a Game-Turn may choose
+[#7_11]
+*[7.11]* The Player who has "Initiative" for a Game-Turn may choose
 whether he wishes to move first or last in a given Operations Stage.
 
-[#7_12]*[7.12]* The Player who will have the Initiative is determined at the
+[#7_12]
+*[7.12]* The Player who will have the Initiative is determined at the
 beginning of each Game-Turn (not Operation Stage). The Player who gains the
 Initiative keepts that Initiative for all three Operations Stages in that
 Game-Turn. Thus, the Player with Initiative may choose to move first in the
 first Operations Stage, last in the second stage and then first in the third
 Stage (which would give him, in effect, two "turns" in a row).
 
-[#7_13]*[7.13]* Each side possesses an Initiative Rating (<<7_2>>), which is
+[#7_13]
+*[7.13]* Each side possesses an Initiative Rating (<<7_2>>), which is
 dependent on the date of the GameTurn.
 
-[#7_14]*[7.14]* To determine which Player has the Initiative for a given
+[#7_14]
+*[7.14]* To determine which Player has the Initiative for a given
 Game-Turn, each Player, in the Initiative Determinate Stage, rolls one die and
 adds his Initiative Rating to the result of the thrown die. The Player with the
 highest total (ties roll again) gains the Initiative. Thus, in October of 1940,
@@ -38,11 +42,13 @@ Player would now be able to choose, in his Initiative Declaration Phase,
 whether he wants to move first or last in the Operations Stage for each of
 three Operations Stages in the Game-Turn.
 
-[#7_15]*[7.15]* The Player with Initiative for the first Game-Turn of a given scenario
+[#7_15]
+*[7.15]* The Player with Initiative for the first Game-Turn of a given scenario
 is usually predetermined. Check the individual scenarios for who has the
 Initiative for the first Game-Turn.
 
-[#7_16]*[7.16]* For purposes of the Sequence of Play, the Player who moves
+[#7_16]
+*[7.16]* For purposes of the Sequence of Play, the Player who moves
 first in an Operations Stage is called "Player A"; the Player who moves last
 in an Operations Stage is called "Player B".
 
