--- a/section-19.adoc
+++ b/section-19.adoc
@@ -7,7 +7,7 @@ As has been discussed previously in a variety of sections, the Organization of
 the various units — i.e., which battalions are part of which Brigade, which
 Brigades and support units form which Division, etc. — is important to the play
 of the game, particularly as pertains to Stacking. The basic Organizational
-heirarchy is pyramidical: <<2_3>> battalions form a brigade, and <<2_3>>
+heirarchy is pyramidical: 2-3 battalions form a brigade, and <<2_3>>
 brigades forma Division. This Section discusses which units are Assigned to a
 Parent Unit and which units may be Attached, how to Attach and Detach units, and
 when and how units may be built up to maximum strength,
@@ -46,17 +46,20 @@ Formation on the Maximum Unit Attachment Chart (<<19_5>>).
 [#19_1]
 === DIFFERENCE BETWEEN "ASSIGNED" AND "ATTACHED" UNITS
 
-[#19_11]*[19.11]* A unit is assigned to a specific Parent Formation if that unit
+[#19_11]
+*[19.11]* A unit is assigned to a specific Parent Formation if that unit
 is considered a part of that Parent Formations organization (e.g., the 8th
 Panzer Regiment — a Brigade equivalent, see <<9_2>> — begins the game assigned
 to the 15th Panzer Division).
 
-[#19_12]*[19.12]* A unit is attached to a specific Parent Formation if the
+[#19_12]
+*[19.12]* A unit is attached to a specific Parent Formation if the
 counter representing the Parent Formation on the map represents the attached
 unit as well. (i.e., not only are both the attached unit and the Parent
 Formation in the same hex, but they are functionally combined into one unit).
 
-[#19_13]*[19.13]* It is possible for the same unit to have two different Parent
+[#19_13]
+*[19.13]* It is possible for the same unit to have two different Parent
 Formtaions simultaneously, one to which it is assigned, and one to which it is
 attached. A unit may never be attached to more than one Parent Formation at
 once; nor may a unit ever be assigned to more than one Parent Formation at once.
@@ -66,7 +69,8 @@ counter); it need not be in the same hex as a Parent Formation to which it is
 assigned.  Of course, a particular unit may be both assigned and attached to the
 same Parent Formation.
 
-[#419_14]*[419.14]* It is possible for the same unit to be a Parent Formation
+[#419_14]
+*[419.14]* It is possible for the same unit to be a Parent Formation
 and to simultaneously be, in turn, assigned and/or attached to another (higher
 level} Parent Formation. Note that the units attached to a particular Parent
 Formation may affect whether or not it can be attached in turn to another unit.
@@ -94,7 +98,8 @@ reassignments are accomplished during the Player's
 Reorganization Segment and recorded on the appropriate Parent Formation's TOE
 Log Sheet.
 
-[#19_21]*[19.21]* Any Parent Formation which has fewer units assigned to it than
+[#19_21]
+*[19.21]* Any Parent Formation which has fewer units assigned to it than
 its maximum (see Case <<19_3>>) may be assigned additional independent
 (non-assigned) units up to that limit (e.g., If only two armored battalions were
 attached to an Italian armor brigade, the Axis Player could, in his
@@ -102,43 +107,48 @@ Reorganization Segment, assign any independent Italian armored battalion to that
 brigade). In order to be assigned to a Parent Formation, an independent unit
 must be currently attached to it.
 
-[#19_22]*[19.22]* Should a unit's assigned Parent Formation be eliminated, (see
+[#19_22]
+*[19.22]* Should a unit's assigned Parent Formation be eliminated, (see
 Case <<19_11>>), if that — presumably detached — unit survives, it is considered
 independent and eligible for re-assignment in accordance with Case <<19_21>> and
 <<19_3>>.
 
-[#19_23]*[19.23]* Should an assigned unit be eliminated, the assignment is
+[#19_23]
+*[19.23]* Should an assigned unit be eliminated, the assignment is
 considered terminated and another independent unit may be assigned to the Parent
 Formation in the eliminated unit's place. (i.e., eliminated units do not count
 towards the limitations listed in Case <<19_3>>).
 
-[#49_24]*[49.24]* The OA Chart (Case <<4_45>>) contains notes concerning
+[#49_24]
+*[49.24]* The OA Chart (Case <<4_45>>) contains notes concerning
 historical shifts in assignment relationships for several units. Players are
 free to either institute or ignore such assignment shifts at their option,
 within the restrictions of Case <<19_21>> (see also Case <<19_25>>). Such
 re-assignments must be accomplished sometime during the month listed on the OA
 Chart note, or not at all.
 
-Example: When the German 15th Panzer Division arrives it contains the <<1_5>>th
+Example: When the German 15th Panzer Division arrives it contains the 15th
 Panzergrenadier (motorized infantry) Regiment, albeit in a somewhat reduced
 state. At a later date, listed in the notes of the 15th Panzer and S5th/21st
-Panzer divisions, that the <<1_5>>th Regiment, originally assigned to the 15th
+Panzer divisions, that the 15th Regiment, originally assigned to the 15th
 Panzer, becomes part of the 21st (nee' 5th Light) Panzer Division, taking on
 some additional units to flesh out its structure. If the Player wishes to switch
-the <<1_5>>th to the 21st Panzer Division, the <<1_5>>th would then be assigned
+the 15th to the 21st Panzer Division, the 15th would then be assigned
 to the 21st Panzer as per this case.
 
-[#19_25]*[19.25]* As indicated on the Formation Organization Chart (<<19_3>>), the
+[#19_25]
+*[19.25]* As indicated on the Formation Organization Chart (<<19_3>>), the
 historical assignment limitations on Commonwealth armored divisions and brigades
 changed three times. The Commonwealth Player may, at his option, assign
 available independent units to such Parent Formations when these changes allow
 additional units to be assigned, The Commonwealth Player must "unassign" excess
 units whenever new, limitations require him to doso.
 
-[#19_26]*[19.26]* A special rule applies to Commonwealth Brigades (both Infantry
+[#19_26]
+*[19.26]* A special rule applies to Commonwealth Brigades (both Infantry
 and Armor). Throughout the war, the Commonwealth made it a practice to shuffle
 individual battalions from one "assignment" to another. This was especially
-prevalent in the Indian units, where battalions like the <<2_5>> Mahratta Light
+prevalent in the Indian units, where battalions like the 25 Mahratta Light
 Infantry appears virtually everywhere. Therefore, the Commonwealth Player is
 permitted to pull assigned battalions from a Brigade and replace them with
 others from another Brigade (or from the unassigned group).  Such battalions are
@@ -149,11 +159,13 @@ and 9th Lancers out, send them to Alexandria for refitting (with, perhaps, new
 tanks, etc.) and replace them with the 4th and 7th Royal Tank Regiment. The
 latter two units are now assigned to the 2nd Armored Brigade.
 
-[#19_27]*[19.27]* Some units (designated with an asterisk on their counters) are
+[#19_27]
+*[19.27]* Some units (designated with an asterisk on their counters) are
 assigned to Parent Formations that never made it to Africa. Except in accordance
 with Case <<19_26>>, such units may not be reassigned.
 
-[#19_28]*[19.28]* Only independent units may be assigned to a Parent Formation.
+[#19_28]
+*[19.28]* Only independent units may be assigned to a Parent Formation.
 No unit assigned to one Parent Formation may be assigned to another, except as
 noted in Case <<19_26>>.
 
@@ -173,15 +185,18 @@ number of units have singular organizational structures, as noted on the OA
 Chart; such units are limited by those strictures, and not by any listed on the
 Formation Organization Chart.
 
-[#19_31]*[19.31] Allied Formation Organization Chart*
+[#19_31]
+*[19.31] Allied Formation Organization Chart*
 
 (see Charts and Tables)
 
-[#19_32]*[19.32] Italian Formation Organization Chart*
+[#19_32]
+*[19.32] Italian Formation Organization Chart*
 
 (see Charts and Tables)
 
-[#19_33]*[19.33] German Formation Organization Chart*
+[#19_33]
+*[19.33] German Formation Organization Chart*
 
 (see Charts and Tables)
 
@@ -195,7 +210,8 @@ assignment limits, attached to them. These attachment limits are listed on the
 Maximum Attachments Chart (19.5). Non-assigned units may also be substituted for
 "missing" assigned units (Case <<19_45>>),
 
-[#19_41]*[19.41]* A unit assigned but not attached to a Parent Formation may
+[#19_41]
+*[19.41]* A unit assigned but not attached to a Parent Formation may
 become attached to that Parent Formation at any time so long as both units are
 in the same hex, at.a cost of one Capability Point each to both the subsidiary
 unit and the Parent Formation. The counter representing the attached unit is
@@ -204,7 +220,8 @@ Formation (or vice versa) and immediately attaching it would have no effect upon
 the Stacking Point value of the Parent Formation (unless if it was a Shell; see
 Case <<9_26>>).
 
-[#19_42]*[19.42]* A unit not assigned to a Parent Formation in the same hex may
+[#19_42]
+*[19.42]* A unit not assigned to a Parent Formation in the same hex may
 be attached to that Parent Formation subject to the restrictions of Cases
 <<19_4>> and <<19_5>> (if applicable) at a cost of two Capability Points for
 both units during the owning Player's Reorganization Segment, only. Note that
@@ -212,11 +229,13 @@ the unit would have to be moved into the hex containing the Parent Formation (or
 vice versa) during an earlier Movement Segment, subject to all stacking
 restrictions.
 
-[#19_43]*[19.43]* A unit assigned and attached to a particular Parent Formation
+[#19_43]
+*[19.43]* A unit assigned and attached to a particular Parent Formation
 may be detached from that Parent Formation at any time at a cost of one
 Capability Point to both units.
 
-[#19_44]*[19.44]* A unit attached but not assigned to a Parent Formation may be
+[#19_44]
+*[19.44]* A unit attached but not assigned to a Parent Formation may be
 detached from that Parent Formation only during the owning Player's
 Reorganization Segment or Movement Segment at a cost of one Capability Point
 each to both units. However, note that units are moved individually or.as a
@@ -225,7 +244,8 @@ from a Parent Formation during a Movement Segment, movement of either the
 detached unit or Parent Formation must cease (unless they are moved on as a
 stack).
 
-[#19_45]*[19.45]* A unit(s) may be attached to a Parent Formation that has fewer
+[#19_45]
+*[19.45]* A unit(s) may be attached to a Parent Formation that has fewer
 units assigned to it than the maximum restrictions listed on the Formation
 Organization Chart (19.3) as a substitute for the “‘missing" (that is, not in
 the games, or reassigned as per Case <<19_66>>) unit(s). Such a unit must not
@@ -237,7 +257,8 @@ division as a substitute. He could not, however, attach an infantry brigade to
 which more than three infantry battalions were assigned as a substitute, since
 that unit would exceed the applicable Formation Organization limits.
 
-[#19_46]*[19.46]* A unit attached to a Parent Formation which is itself in turn
+[#19_46]
+*[19.46]* A unit attached to a Parent Formation which is itself in turn
 attached to a larger Parent Formation is considered attached to the larger
 Parent Formation also. Note: This requirement may render it impossible (unless
 detachments are made) to attach a certain unit to a Parent Formation because
@@ -246,13 +267,14 @@ Formation's organizational structure. Exception: Units attached to a Parent
 Formation in turn attached to a larger Parent Formation in accordance with Case
 19.45 do not count as being attached to the larger Parent Formation.
 
-[#19_47]*[19.47]* Any units currently attached to a Parent Formation may be
+[#19_47]
+*[19.47]* Any units currently attached to a Parent Formation may be
 detached in such a way that they end up attached to one another at a cost of
 only the Capability Points required for detachment.
 
-For example, the <<1_2>>nd Regimente Corazzate and the Nizza Cavelleria Regiment
+For example, the 12nd Regimente Corazzate and the Nizza Cavelleria Regiment
 are detached fromthe Ariete Division. The N.C. Rgt. may be attached to the
-<<1_2>>nd R.C. at this point without any additional expenditures.
+12nd R.C. at this point without any additional expenditures.
 
 [#19_5]
 === MAXIMUM ATTACHMENT CHART
@@ -278,23 +300,27 @@ There are some cases, albeit rare, where the arriving TOE Strength is below the
 System(s) section for that unit, and the Players may increase these units
 accordingly.
 
-[#19_61]*[19.61]* Units that have been depleted (reduced) by combat, attrition,
+[#19_61]
+*[19.61]* Units that have been depleted (reduced) by combat, attrition,
 etc., may be augmented by Replacements (see Case <<20_4>>). No unit may ever be
 increased above its stated maximum TOE Strength Level (listed in the OA Chart
 for that unit).
 
-[#19_62]*[19.62]* Units that have been completely eliminated because of
+[#19_62]
+*[19.62]* Units that have been completely eliminated because of
 attrition on combat—not breakdown (i.e., no TOE Strength Points remaining) may
 not be rebuilt. However, HQ units that have lost aff their assigned battalions
 may have new battalions assigned (up to the number listed on the OA Chart) as
 long as the HQ unit exists asa cadre.
 
-[#19_63]*[19.63]* If a HQ unit (counter) is eliminated, it may not be rebuilt
+[#19_63]
+*[19.63]* If a HQ unit (counter) is eliminated, it may not be rebuilt
 unless at least 50% of its assigned units still exist and are not attached to
 other units. In such case, two Infantry Replacement Points may be used to revive
 the HQ, Otherwise it is gone for good.
 
-[#19_64]*[19.64]* The use of Replacement Points is covered in Case <<20_4>>.
+[#19_64]
+*[19.64]* The use of Replacement Points is covered in Case <<20_4>>.
 However, the following principles apply in using Replacement Points to rebuild
 units:
 
@@ -315,11 +341,13 @@ that is easier to discern.)
 d. Creation of Heavy Weapons Points requires the expenditure of Infantry
 Replacement Points and Gun Replacement Points.
 
-[#19_65]*[19.65]* Armored Recce and Armored Car units use Recce points, usually,
+[#19_65]
+*[19.65]* Armored Recce and Armored Car units use Recce points, usually,
 to rebuild. However, the Players may wish to use their Light Tanks to augment
 Recce units (see Case <<20_6>>).
 
-[#19_66]*[19.66]* In an instance where a battalion assigned to a Parent
+[#19_66]
+*[19.66]* In an instance where a battalion assigned to a Parent
 Formation has either been eliminated entirely or has, for any reason, been
 assigned to another Formation, the assigned "space" for that battalion may be
 taken by another, previously unassigned, battalion. The latter battalion is then
@@ -329,11 +357,13 @@ Commonwealth Player may assign, say, the 7th RTR to fill its place, even though
 the 7th RTR would not normally be allowed to be assigned to the Ist Army Tank
 Brigade. (It would be allowed to "switch" under Case <<19_26>>).
 
-[#19_67]*[19.67]* The HQ unit for a Parent Formation is, for play purposes, its
+[#19_67]
+*[19.67]* The HQ unit for a Parent Formation is, for play purposes, its
 Cadre. As long as the HQ exists, that Parent Formation may be rebuilt by or
 Reassignments. If the HQ is eliminated, see Case 19.62 and <<19_63>>.
 
-[#19_68]*[19.68]* Rebuilding units takes place in the Organization Phase only;
+[#19_68]
+*[19.68]* Rebuilding units takes place in the Organization Phase only;
 it may not take place at any other time. For every two Replacement TOE Strength
 Points added to a unit, that unit (and its parent, if such is the situation)
 uses one Capability Point. A unit may earn Disorganization Points by taking on a
@@ -343,7 +373,8 @@ units a Player wishes to so refit should be first moved to rear areas.
 [#19_7]
 === AXIS BATTLE GROUPS
 
-[#19_71]*[19.71]* The Germans — and to some extent the Italians — have the
+[#19_71]
+*[19.71]* The Germans — and to some extent the Italians — have the
 ability to form Battle Groups (Kampfgruppen) out of ad hoc units or from units
 from other divisions and brigades. The Germans did this quite often, molding
 individual Battle Groups to fit an occasion. Therefore, at any time during an
@@ -353,12 +384,14 @@ must conform to Stacking Restrictions and the limits listed in the following
 Cases. Battle Group counters are pro- | vided to give HQ support. (These Battle
 Groups are given historical names, but can be used in any fashion.)
 
-[#19_72]*[19.72]* A German Battle Group can carry a maximum of four battalion
+[#19_72]
+*[19.72]* A German Battle Group can carry a maximum of four battalion
 sized units of any type, but there may be no more than one tank battalion and/or
 two infantry battalions. Up to two additional companies may be attached over
 this limit.
 
-[#19_73]*[19.73]* The Italians also formed Battle Groups, but on a limited
+[#19_73]
+*[19.73]* The Italians also formed Battle Groups, but on a limited
 basis. No actual counters are provided, but the Italian Player, if he wishes,
 may form Battle Groups using the list of Battle Groups on the Italian OA Sheet.
 Italian Battle Groups may have a maximum of three battalion-sized units, only
@@ -374,65 +407,80 @@ be especially useful) to form "ad hoc" units; i.e., new units not in the game.
 Essentially, he will be forming batteries of from 3 to 6 TOE Strength Points of
 any one AT gun.
 
-[#19_81]*[19.81]* The Axis Player's Brigade-Level HQ units (including
+[#19_81]
+*[19.81]* The Axis Player's Brigade-Level HQ units (including
 Kampfgruppe) bearing an infantry-type symbol may contain up to six TOE Strength
 Points of anti-tank guns.
 
-[#19_82]*[19.82]* The Axis Player may augment any Brigade-Level HQ at any point
+[#19_82]
+*[19.82]* The Axis Player may augment any Brigade-Level HQ at any point
 in the game with Anti-tank TOE Strength Points if, at that point in time, all of
 his anti-tank units on the map (which includes the Tripoli-Tunisia boxes for
 this purpose) are ai at least 67% of their maximum permitted TOE Strength.
 
-[#19_83]*[19.83]* The augmentation is performed by assigning anti-tank
+[#19_83]
+*[19.83]* The augmentation is performed by assigning anti-tank
 Replacement TOE Strength Points to the HQ as if the HQ is an anti-tank unit. The
 initial assignment must be at least three TOE Strength Points.
 
-[#19_84]*[19.84]* The assigned Anti-Tank Replacement Points are trained at the
+[#19_84]
+*[19.84]* The assigned Anti-Tank Replacement Points are trained at the
 Gun Replacement Point rate.
 
-[#19_85]*[19.85]* An HQ that contains Anti-Tank TOE Strength Points possesses a
+[#19_85]
+*[19.85]* An HQ that contains Anti-Tank TOE Strength Points possesses a
 CPA equal to that of those Anti-Tank Points.
 
-[#19_86]*[19.86]* The Axis Player may only assign a single type of anti-tank
+[#19_86]
+*[19.86]* The Axis Player may only assign a single type of anti-tank
 guns to a particular HQ (if they are eliminated completely he may begin again
 with any type of anti-tank gun). Note that captured anti-tank guns cannot be
 used to augment.
 
-[#19_87]*[19.87]* An augmented HQ retains a Stacking Point value of zero
+[#19_87]
+*[19.87]* An augmented HQ retains a Stacking Point value of zero
 regardiess of the number of AT points it currently contains.
 
 [#19_9]
 === AUGMENTING COMMORWEALTH BATTALIONS WITH ANTI-TANK
 
-[#19_91]*[19.91]* Starting with the 75th Game-Turn (April 1, <<19_2>>), the
+[#19_91]
+*[19.91]* Starting with the 75th Game-Turn (April 1, <<19_2>>), the
 Commonwealth Player may increase the capabilities of certain of his infantry
 battalions by giving them TOE Strength Points of Anti-Tank guns.
 
-[#19_92]*[19.92]* Only those infantry battalions possessing a CPA Rating of 10
+[#19_92]
+*[19.92]* Only those infantry battalions possessing a CPA Rating of 10
 (whether or not they were historically motorized; i.e., CPA Rating of 10+) and
-Offensive/Defense Close Assault Ratings of either <<1_2>> or <<2_2>> may be so
+Offensive/Defense Close Assault Ratings of either 1/2 or 2/2 may be so
 augmented.
 
-[#19_93]*[19.93]* These infantry unit's characteristics change to now permit the
+[#19_93]
+*[19.93]* These infantry unit's characteristics change to now permit the
 unit to contain a second weapons system (i.e., Anti-Tank TOE Strength Points).
 
-[#19_94]*[19.94]* Each historically motorized infantry battalion (CPA of 10+)
+[#19_94]
+*[19.94]* Each historically motorized infantry battalion (CPA of 10+)
 may contain 2 TOE Strength Points of anti-tank guns. Each historically
 nonmotorized infantry battalion (CPA of 10) may contain one TOE Strength Point
 of Anti-Tank guns.
 
-[#19_95]*[19.95]* The Anti-Tank Points are assigned to the infantry unit as
+[#19_95]
+*[19.95]* The Anti-Tank Points are assigned to the infantry unit as
 regular Gun Replacement Points.  They undergo training at the Gun Replacement
 Point rate.
 
-[#19_96]*[19.96]* No Anti-Tank TOE Strength Points may be so assigned if, at
+[#19_96]
+*[19.96]* No Anti-Tank TOE Strength Points may be so assigned if, at
 that point in time, any antitank regiment assigned to the infantry battalions
 parent unit(s) is not at maximum TOE Strength.
 
-[#19_97]*[19.97]* Once the Anti-Tank Points have been absorbed by the infantry
+[#19_97]
+*[19.97]* Once the Anti-Tank Points have been absorbed by the infantry
 unit they possess the CPA of that infantry unit (i.e., a CPA of 10 if the
 infantry are walking or a CPA of 20 or 25 if the infantry are motorized).
 
-[#19_98]*[19.98]* Anti-Tank TOE Strength Points do not affect any shell
+[#19_98]
+*[19.98]* Anti-Tank TOE Strength Points do not affect any shell
 determinations of the infantry unit.
 
