--- a/section-52.adoc
+++ b/section-52.adoc
@@ -19,17 +19,20 @@ CASES:
 [#52_1]
 === WELLS
 
-[#52_11]*[52.11]* Water is found in wells—and only wells.  (It may be extended
+[#52_11]
+*[52.11]* Water is found in wells—and only wells.  (It may be extended
 from wells through the use of water pipelines.) Wells are located in major
 cities, villages, and birs. Water is also found in oases (See 52.3). Each of the
 above automatically contains a well; no other locations or hexes have wells.
 (The Tripoli/Tunisia boxes each have unlimited wells.)
 
-[#52_12]*[52.12]* The amount of water available from a given source is given in
+[#52_12]
+*[52.12]* The amount of water available from a given source is given in
 the Water Availability Table,  <<52_7>>). The Table also gives the depletion
 possibilities for each source.
 
-[#52_13]*[52.13]* To obtain water, a unit moves into a hex with a well. The
+[#52_13]
+*[52.13]* To obtain water, a unit moves into a hex with a well. The
 Player then expends one CP and throws a die to draw water (the die roll is
 unnecessary in Major Cities and oases.). He consults the Water Availability
 Table under the correct column (village or bir) and cross-references the dieroll
@@ -38,18 +41,21 @@ whether the source is depleted or not. Players should note that wells in major
 cities and oases have unlimited water; they may not be depleted and they may not
 be poisoned.
 
-[#52_14]*[52.14]* When a well becomes depleted, the Player who drew the water
+[#52_14]
+*[52.14]* When a well becomes depleted, the Player who drew the water
 notes this on a piece of paper.  He does not have to tell the opposing Player
 that the well is depleted. However, if an opposing Player's units enter a hex
 with a depleted well, and attempts to draw water the Player then tells him that
 it is depleted (after he has expended the one CP!). When a depleted well is
 revealed, a depleted marker is placed in that hex.
 
-[#52_15]*[52.15]* Depleted wells remain depleted until a rainstorm occurs. All
+[#52_15]
+*[52.15]* Depleted wells remain depleted until a rainstorm occurs. All
 depleted wells on a gamemap section with a rainstorm are automatically
 replenished at the instant the rainstorm occurs.
 
-[#52_16]*[52.16]* Wells in villages and birs (not in major cities or oases) may
+[#52_16]
+*[52.16]* Wells in villages and birs (not in major cities or oases) may
 be "poisoned". Actually, poisoning is a fanciful term. No one actually dropped
 fifty pounds of arsenic down a well; the folks in Geneva looked askance at that
 sort of thing.  Rather, the wells could be salted, as there was plenty of salt
@@ -59,7 +65,8 @@ poisoned. If the dieroll is 2-6 the attempt fails (for any number of reasons)
 and no further attempt on that well may be made that Operations Stage. Poisoned
 wells may be kept secret as in 52.14.
 
-[#52_17]*[52.17]* Poisoned wells may be sweetened (unpoisoned) by having any
+[#52_17]
+*[52.17]* Poisoned wells may be sweetened (unpoisoned) by having any
 land unit expend 5 CP's and roll a die. If the result is a 1, 2, or 3 the well
 is OK. Any number of attempts—at 5 CP's a shot—may be undertaken, except that a
 unit may not exceed its CPA trying to sweeten wells.
@@ -67,26 +74,31 @@ unit may not exceed its CPA trying to sweeten wells.
 [#32_2]
 === WATER PIPELINES
 
-[#52_21]*[52.21]* Players may try to extend their access to fresh water by
+[#52_21]
+*[52.21]* Players may try to extend their access to fresh water by
 constructing water pipelines.  Pipelines extend from a specific source of
 water—only wells in major cities.
 
-[#52_22]*[52.22]* Water pipelines may extend from any well in a major city any
+[#52_22]
+*[52.22]* Water pipelines may extend from any well in a major city any
 length the Player desires.  The Commonwealth Player may consider any operating
 Railroad hex to be a pipeline for water, and he may construct pipelines from any
 railroad hex. The Axis Player may pot use the defunct Barce-Benghzai railroad
 for this purpose.
 
-[#52_23]*[52.23]* Any water pipeline (or RR hex) is considered as a source of
+[#52_23]
+*[52.23]* Any water pipeline (or RR hex) is considered as a source of
 water similar to a major city.  It may not be poisoned or depleted, and it is
 unlimited. It may be destroyed.
 
-[#52_24]*[52.24]* Pipelines are built by engineer battalions or CW HQ units in
+[#52_24]
+*[52.24]* Pipelines are built by engineer battalions or CW HQ units in
 the engineering capability. It takes one Construction Phase, plus the
 expenditure of 10 stores, to build a hex of pipeline. Only one pipeline hex may
 be built in any given Operations Stage.
 
-[#52_25]*[52.25]* Water Pipelines are susceptible to enemy attacks.
+[#52_25]
+*[52.25]* Water Pipelines are susceptible to enemy attacks.
 Pipelines—except for railroads acting as pipelines—may be destroyed by desert
 raiders, the presence of an Enemy unit in the hex, or strafing.  Railroad
 pipelines are destroyed if the railroad is destroyed. If a pipeline is
@@ -108,34 +120,42 @@ them the entire game. Pipelines cannot be built from Oases.
 [#52_4]
 === WATER USAGE RATES
 
-[#52_41]*[52.41]* Each infantry battalion or company regardless of its TOE
+[#52_41]
+*[52.41]* Each infantry battalion or company regardless of its TOE
 Strength, requires one Water Point per Operations Stage. See also <<52_6>>.
 
-[#52_42]*[52.42]* Each TOE Strength Point of Vehicle (Tank, Recce, Artillery,
+[#52_42]
+*[52.42]* Each TOE Strength Point of Vehicle (Tank, Recce, Artillery,
 etc.) or Truck Point requires one Water Point each Operations Stage, if it uses
 any of its CPA.
 
-[#52_43]*[52.43]* Hot weather  <<29_3>>) requires additional water usage.
+[#52_43]
+*[52.43]* Hot weather  <<29_3>>) requires additional water usage.
 
-[#52_44]*[52.44]* Water—except for water in wells and pipelines—is subject to
+[#52_44]
+*[52.44]* Water—except for water in wells and pipelines—is subject to
 evaporation and spillage (See <<49_3>>).
 
-[#52_45]*[52.45]* Water may be transported by trucks at the rates given in the
+[#52_45]
+*[52.45]* Water may be transported by trucks at the rates given in the
 Truck Capacity Tables  <<40_2>>).
 
 [#52_5]
 === EFFECTS OF LACK OF WATER
 
-[#52_51]*[52.51]* Vehicles without water may not move or close assault
+[#52_51]
+*[52.51]* Vehicles without water may not move or close assault
 offensively. Vehicles without water defending against close assault halve their
 total raw strength before determining actual strength.
 
-[#52_52]*[52.52]* Infantry units (all units moving without benefit of vehicles)
+[#52_52]
+*[52.52]* Infantry units (all units moving without benefit of vehicles)
 may not voluntarily exceed their CPA for the Operations Stage they are deprived
 of water. Furthermore, they may not engage in offensive close assault; they
 defend at half strength.
 
-[#52_53]*[52.53]* For every consecutive operations Stage after the first
+[#52_53]
+*[52.53]* For every consecutive operations Stage after the first
 Operations Stage without water, each infantry unit loses one TOE Point.
 
 [#52_6]
