--- a/section-53.adoc
+++ b/section-53.adoc
@@ -31,7 +31,8 @@ the form of rigid rules but rather as a system—based on one actually used in t
 campaign—so that the player may better visualize what he can accomplish and what
 he has to doit with.
 
-[#53_11]*[53.11] First Line Trucks*
+[#53_11]
+*[53.11] First Line Trucks*
 +
 These are trucks attached directly to the parent combat unit (division, brigade,
 battalion, etc.).  They are used to carry men and/or supplies of that parent
@@ -41,7 +42,8 @@ as first line and assigns men or supplies to each truck unit. First line trucks
 may be detached (in the Organization Phase), in which case they will be
 represented by a counter and are no longer considered to be first line trucks.
 
-[#53_12]*[53.12] Second Line Trucks*
+[#53_12]
+*[53.12] Second Line Trucks*
 +
 These truck units essentially operate between combat units and the forward supply dumps from
 which they are retrieving supplies. These trucks are
@@ -54,7 +56,8 @@ during the Truck Convoy Movement Segment of
 the Operations Stage, as they are not attached toa
 regular unit.
 
-[#53_13]*[53.13] Third Line Trucks*
+[#53_13]
+*[53.13] Third Line Trucks*
 
 These trucks operate between the major ports of entry (e.g., Alexandria,
 Tripoli, Cairo, Tobruk, etc.) where supplies and reinforcements originate, and
@@ -63,7 +66,8 @@ units, although there is no rule restricting such transport. Third line trucks
 are similar in all ways to second line trucks, with the sole exception of the
 name, which distinguishes them in any supply network you may devise.
 
-[#53_14]*[53.14]* Three Tier Organization: The most efficient system for hauling
+[#53_14]
+*[53.14]* Three Tier Organization: The most efficient system for hauling
 supplies and reinforcements is a three-tiered effort: third line trucks pick up
 supplies from the port of entry and transport them to forward dump areas; second
 line trucks pick up supplies at those forward dump areas and drive them directly
@@ -74,12 +78,14 @@ recommended by the designers and the playtesters; it is not, however, a rule.
 [#53_2]
 === RESTRICTIONS ON THE USE OF TRUCKS
 
-[#53_21]*[53.21]* Trucks acting as convoys may move only in the Truck Convoy
+[#53_21]
+*[53.21]* Trucks acting as convoys may move only in the Truck Convoy
 Movement Segment (See 8.18). This applies only to trucks not attached toa combat
 unit or HQ. Thus, truck counters on the game maps are, by definition, convoys
 and will move only in the Truck Convoy Movement Segment.
 
-[#53_22]*[53.22]* Trucks moving in a Convoy Movement Segment have an extended
+[#53_22]
+*[53.22]* Trucks moving in a Convoy Movement Segment have an extended
 CPA: heavy and medium trucks havea CPA of thirty (30), and light trucks have a
 CPA of forty (40). However, Trucks moving in a Truck Convoy Movement Segment may
 never, under any circumstances, exceed their extended CPA. If, for some reason,
@@ -88,12 +94,14 @@ suffered breakdown  <<21_0>>) at the instant they exceed their extended CPA.
 First line trucks use their basic CPA (20 or 25) and may exceed their CPA as
 their parent unit does (See <<6_1>>).
 
-[#53_23]*[53.23]* Any combat unit with a cohesion level of minus five (-5) or
+[#53_23]
+*[53.23]* Any combat unit with a cohesion level of minus five (-5) or
 worse may not voluntarily detach its first line trucks. Conversely, second and
 third line trucks attached as first line trucks assume the cohesion level of the
 parent unit.
 
-[#53_24]*[53.24]* There is a Capability Point cost to load and/or off-load
+[#53_24]
+*[53.24]* There is a Capability Point cost to load and/or off-load
 supplies and men. (See <<6_3>>). Supplies for one truck unit must have been
 off-loaded by that truck before another truck unit may load and carry them. This
 applies even if both truck units are attached to the same parent combat unit or
@@ -105,7 +113,8 @@ freely be loaded and unloaded; during the Combat and Movement Segment,
 ammunition and fuel loaded in trucks that hex may be expanded with no unloading
 cost.
 
-[#53_25]*[53.25]* "Leapfrogging" is not permitted. Leapfrogging is defined as
+[#53_25]
+*[53.25]* "Leapfrogging" is not permitted. Leapfrogging is defined as
 having truck "A" carrying supplies to a hex, then having truck "B" pick up the
 same supplies in the same Movement Segment and move them on to another truck,
 which then picks them up, and so on. If this were allowed, a given cache of
@@ -118,7 +127,8 @@ they started with in the Operations Stage.
 [#53_3]
 === ABANDONED VEHICLES
 
-[#53_31]*[53.31]* Trucks, or any prohibited vehicles, that are in a salt marsh
+[#53_31]
+*[53.31]* Trucks, or any prohibited vehicles, that are in a salt marsh
 hex and not on a road or track are automatically abandoned (see <<8_44>>). If
 the abandoned vehicle was carrying infantry-type units or is an artillery unit
 and there is an Enemy combat unit within three traversable hexes (counted from
@@ -128,7 +138,8 @@ surrender and the guns are captured. If there is no Enemy around, the infantry
 is now on foot and walking (starting next Movement Stage) and the guns are
 abandoned.
 
-[#53_32]*[53.32]* Abandoned vehicles and guns may be recovered by any unit in an
+[#53_32]
+*[53.32]* Abandoned vehicles and guns may be recovered by any unit in an
 adjacent non-salt marsh hex with engineering capability  <<23_1>>). The cost to
 recover such vehicles (or guns) is 10 CP's to both units. (Note: The abandoned
 vehicle is considered to have its full CPA.) Recovery may not be performed if
