--- a/section-10.adoc
+++ b/section-10.adoc
@@ -12,27 +12,33 @@ entering an Enemy controlled hex.
 [#10_1]
 === WHICH UNITS EXERT A ZONE OF CONTROL
 
-[#10_11]*[10.11]* All combat units above battalionequivalent (i.e. with more
+[#10_11]
+*[10.11]* All combat units above battalionequivalent (i.e. with more
 than one Stacking Point) exert a Zone of Control. In addition, if there is more
 than one Stacking Point in a hex even if no larger-than-battalion unit is
 present, the units in that hex also exert a ZOC. Truck Convoys never exert a
 ZOC, nor do HQ units that have no attached combat units.
 
-[#10_12]*[10.12]* Aircraft, Squadron Ground Support units, and warships exert
+[#10_12]
+*[10.12]* Aircraft, Squadron Ground Support units, and warships exert
 no ZOC.
 
-[#10_13]*[10.13]* Informational markers, such as dumps, minefields, airfields,
+[#10_13]
+*[10.13]* Informational markers, such as dumps, minefields, airfields,
 etc., do not exert a ZOC.
 
-[#10_14]*[10.14]* Units with a Cohesion Level of —26 or worse do not exert
+[#10_14]
+*[10.14]* Units with a Cohesion Level of —26 or worse do not exert
 a ZOC.
 
-[#10_15]*[10.15]* Regardless of <<10_11>>, any unit(s) in a hex that total less
+[#10_15]
+*[10.15]* Regardless of <<10_11>>, any unit(s) in a hex that total less
 than ten Raw Defensive Close Assault Points do not exert a ZOC, whatever the
 organizational size of the unit. For this purpose, anti-tank units are always
 presumed to be Up Front (see Case <<12_1>>).
 
-[#10_16]*[10.16]* The non-Phasing Player must inform the Phasing Player whether
+[#10_16]
+*[10.16]* The non-Phasing Player must inform the Phasing Player whether
 or not a particular unit exerts a Zone of Control if that unit could exert a Zone
 into a hex and a unit belonging to the Phasing Player either begins a Movement
 Segment in that hex or is moved into that hex.
@@ -40,7 +46,8 @@ Segment in that hex or is moved into that hex.
 [#10_2]
 === EFFECTS OF ZONES OF CONTROL
 
-[#10_21]*[10.21]* ZOC's extend into all hexes on the gamemap, with the following exceptions:
+[#10_21]
+*[10.21]* ZOC's extend into all hexes on the gamemap, with the following exceptions:
 
 [loweralpha]
 
@@ -54,17 +61,20 @@ which the unit wishing to exert the ZOC could not enter from its present
 location. (Example: a Tank Battalion could not exert a ZOC into a Salt Marsh hex
 unless there was a Track or Road connecting the two hexes.)
 
-[#10_22]*[10.22]* There is no cost in CP's to enter an Enemy
+[#10_22]
+*[10.22]* There is no cost in CP's to enter an Enemy
 ZOC. However, see Section <<10_3>>.
 
-[#10_23]*[10.23]* A unit must cease movement upon entering an
+[#10_23]
+*[10.23]* A unit must cease movement upon entering an
 Enemy-controlled hex. The moving unit may not exit that Enemy-controlled hex
 until the next Movement Segment (within that Operations Stage or in the next
 Operations Stage). If a unit begins a Movement Segment in an Enemy controlled hex
 it may leave that ZOC, at a cost in CP's to Break Off (<<8_7>>). Units may not be
 retreated into a hex in an Enemy ZOC (exception: see Case <<10_26>>).
 
-[#10_24]*[10.24]* No units may be moved directly from one Enemy-controlled hex
+[#10_24]
+*[10.24]* No units may be moved directly from one Enemy-controlled hex
 into another Enemycontrolled hex. However, terrain permitting, a unit may always
 "advance" into an adjacent hex vacated by an Enemy unit as a result of Combat,
 Retreat Before Assault, or Reaction. Such advance is taken as part of movement
@@ -72,22 +82,27 @@ in the ensuing Movement Segment and costs CP's. (There is no literal Advance
 After Combat rule in CNA; this rule is simply an exception to the
 no-movementinto-Enemy-ZOC's rule).
 
-[#10_25]*[10.25]* Friendly units may move through hexes adjacent to an Enemy
+[#10_25]
+*[10.25]* Friendly units may move through hexes adjacent to an Enemy
 combat unit that are not controlled by that Enemy unit's ZOC. (See Cases <<10_1>>
 and <<10_21>>).
 
-[#10_26]*[10.26]* For al/ movement purposes, the presence of a Friendly combat
+[#10_26]
+*[10.26]* For al/ movement purposes, the presence of a Friendly combat
 unit in a hex negates the effect of an Enemy ZOC. Friendly ZOC's never affect
 Friendly units.
 
-[#10_27]*[10.27]* Opposing units exerting ZOC's on each other are considered to
+[#10_27]
+*[10.27]* Opposing units exerting ZOC's on each other are considered to
 be in each other's ZOC.  Furthermore, if opposing units exert a ZOC into the
 same hex that hex is considered to be controlled by both Players.
 
-[#10_28]*[10.28]* There is no additional effect when more than one unit exerts a
+[#10_28]
+*[10.28]* There is no additional effect when more than one unit exerts a
 ZOC into a given hex.
 
-[#10_29]*[10.29]* Truck Convoys may not enter an Enemy ZOC unless such hex is
+[#10_29]
+*[10.29]* Truck Convoys may not enter an Enemy ZOC unless such hex is
 already occupied by a Friendly combat unit. Furthermore, no noncombat unit
 (i.e., bare HQ's, Engineers, Air Squadron Ground Support Units, etc.) may ever
 enter an unoccupied hex in an enemy ZOC voluntarily. If such a unit is alone in
@@ -97,7 +112,8 @@ strength of any type, such Friendly non-combat unit is Captured.
 [#10_3]
 === ZOC COMBAT REQUIREMENTS (HOLDING OFF)
 
-[#10_31]*[10.31]* All hexes containing Enemy units exerting Zones of Control on
+[#10_31]
+*[10.31]* All hexes containing Enemy units exerting Zones of Control on
 Friendly combat units must be attacked—either by Artillery Barrage or by Close
 Assault.
 
@@ -106,18 +122,21 @@ Assault.
 A Probe (see Case <<15_9>>) satisfies this requirement if the basic differential is -4 or better.
 ====
 
-[#10_32]*[10.32]* As an exception to <<10_31>>, if the Friendly units in such
+[#10_32]
+*[10.32]* As an exception to <<10_31>>, if the Friendly units in such
 Enemy ZOC consist solely of Artillery, anti-tank, or anti-aircraft (or
 non-combat) units, or there are other type units but they are pinned (<<12_42>>),
 these units do not have to attack as in Case <<10_31>>.
 
-[#10_33]*[10.33]* Players may use a special "Holding Off" Artillery Barrage to
+[#10_33]
+*[10.33]* Players may use a special "Holding Off" Artillery Barrage to
 satisfy the requirements of <<10_31>>. (For experienced gamers, this is a
 sophisticated version of "Soaking Off".) Thus a Friendly Division that is in the
 ZOC of Enemy units from two different hexes may choose to Hold Off one of those
 hexes and Close Assault the other.
 
-[#10_34]*[10.34]* To perform a Holding Off Barrage, a Friendly Player must
+[#10_34]
+*[10.34]* To perform a Holding Off Barrage, a Friendly Player must
 Barrage an Enemy hex with at least as many Actual Barrage Strength Points (i.e.,
 Barrage Rating x TOE Strength + 10) as there are individual non-Gun (i.e.,
 Artillery, AntiTank or AA units) Enemy battalion-equivalent combat units (units
@@ -126,12 +145,14 @@ Remember, an Enemy Division may consist of, say, eleven battalion-equivalent
 units, so the Friendly Barraging Player would need 11 Actual Barrage Points to
 perform a Holding Off action against such a Division.
 
-[#10_35]*[10.35]* If, according to the precepts of <<10_34>>, a Friendly Phasing
+[#10_35]
+*[10.35]* If, according to the precepts of <<10_34>>, a Friendly Phasing
 Player can not Hold Off Enemy units in a given hex, he must Close Assault
 that hex.  (Remember Case <<10_32>>). There is no minimum point requirement for
 a Close Assault.
 
-[#10_36]*[10.36]* If, for any reason, a unit can neither Assault nor Hold Off an
+[#10_36]
+*[10.36]* If, for any reason, a unit can neither Assault nor Hold Off an
 Enemy unit, that Friendly unit must Retreat three hexes (playing all CP's for
 such movement) and earn three Disorganization Points, in addition to any
 garnered by the retreat. Such retreat must place the retreating unit three hexes
