--- a/section-14.adoc
+++ b/section-14.adoc
@@ -39,14 +39,16 @@ all results are only applied after all fire is complete.
 [#14_1]
 === WHICH UNITS MAY PARTICIPATE IN ANTI-ARMOR COMBAT
 
-[#14_11]*[14.11]* Anti-Armor Combat pits units with AntiArmor Ratings firing
+[#14_11]
+*[14.11]* Anti-Armor Combat pits units with AntiArmor Ratings firing
 against targets that have Armor Protection Ratings. Only units assigned to the
 Anti-Armor Sub-Segment of the Combat Segment may fire their Anti-Armor Points,
 and only those units actually committed to Anti-Armor or Close Assault are
 affected by such fire (see Case <<14_12>>).  Units with Armor Protection Ratings
 withheld from combat are not affected by Anti-Armor fire.
 
-[#14_12]*[14.12]* Anti-Armor fire by the Phasing Player is directed at an entire
+[#14_12]
+*[14.12]* Anti-Armor fire by the Phasing Player is directed at an entire
 adjacent hex (not specific target units) occupied by Enemy units. Anti-armor
 fire by the non-Phasing Player is directed against any Phasing Armor Class units
 assaulting the hex.  Units that are in a hex at which Anti-Armor fire is
@@ -54,26 +56,31 @@ directed that have Retreated Before Assault are affected by Anti-Armor fire
 (although they may not use Anti-Armor fire against Enemy units) and they may not
 be withheld from the effects of AntiArmor fire.
 
-[#14_13]*[14.13]* Any artillery unit with an Anti-Armor Rating that is in a Back
+[#14_13]
+*[14.13]* Any artillery unit with an Anti-Armor Rating that is in a Back
 position (see Case <<12_1>>) may not participate in (nor is it affected by)
 AntiArmor fire. Anti-Armor guns are always Forward when firing.
 
-[#14_14]*[14.14]* Artillery units used in an Anti-Armor role have an automatic
+[#14_14]
+*[14.14]* Artillery units used in an Anti-Armor role have an automatic
 Vulnerability Rating of 2.
 
 [#14_2]
 === RESTRICTIONS ON ANTI-ARMOR COMBAT
 
-[#14_21]*[14.21]* Units withheld from both Anti-Armor and Assault Combat are not
+[#14_21]
+*[14.21]* Units withheld from both Anti-Armor and Assault Combat are not
 affected by Anti Armor fire (although defending units withheld may be affected by
 Close Assault).
 
-[#14_22]*[14.22]* No hex may be attacked by Anti-Armor fire more than once in a
+[#14_22]
+*[14.22]* No hex may be attacked by Anti-Armor fire more than once in a
 Combat Segment, but units from different hexes may direct Anti-Armor fire into
 the same Target hex, combining their Anti-Armor Strength into one total
 strength.
 
-[#14_23]*[14.23]* The Player directing the fire may not know whether the
+[#14_23]
+*[14.23]* The Player directing the fire may not know whether the
 opposing Player actually has any armor in a hex; that is his problem to
 determine. If the "defending" Player has no units with Armor Protection Ratings
 in a hex being fired on by Anti-Armor the "attacking/firing" Player may reassign
@@ -81,24 +88,29 @@ up to % (rounded down) of those AntiArmor points to Close Assault for that
 Combat Segment. Only when there are no defending Armor units in a Target hex may
 this occur.
 
-[#14_24]*[14.24]* Ammunition for Anti-Armor fire is removed as expended.
+[#14_24]
+*[14.24]* Ammunition for Anti-Armor fire is removed as expended.
 
-[#14_25]*[14.25]* Certain terrain influences the effectiveness of Anti-Armor
+[#14_25]
+*[14.25]* Certain terrain influences the effectiveness of Anti-Armor
 fire, and these effects are noted on the Terrain Effects Chart (see Case
 <<8_37>>) and in Case <<14_3>>. All column adjustments are made before firing.
 
-[#14_26]*[14.26]* Remember, a Player may divide a unit's TOE Strength Points
+[#14_26]
+*[14.26]* Remember, a Player may divide a unit's TOE Strength Points
 between Anti-Armor or Assault, but he may not use a given TOE Strength Point for
 both in the same Segment.
 
 [#14_3]
 === TERRAIN EFFECTS ON ANTI-ARMOR FIRE
 
-[#14_31]*[14.31]* Certain types of terrain influence the ef fectiveness of
+[#14_31]
+*[14.31]* Certain types of terrain influence the ef fectiveness of
 Anti-Armor fire, while certain types of hexsides render Anti-Armor fire
 impossible.
 
-[#14_32]*[14.32]* Where the defending armor is in a hex where there is a Terrain
+[#14_32]
+*[14.32]* Where the defending armor is in a hex where there is a Terrain
 Effect, there is a Column Shift in favor of the Defender; i.e., it lessens the
 Anti-Armor firepower of the Attacker. All such effects are listed on the Terrain
 Effects Chart (Case <<8_37>>). E.g., if units in a Rough Terrain hex are fired
@@ -106,31 +118,37 @@ on by Anti-Armor Fire worth nine Actual Anti-Armor Strength Points the combat is
 resolved in the eight column of the Anti-Armor CRT because of the one column
 shift.
 
-[#14_33]*[14.33]* The effects of terrain (including fortifications) are not
+[#14_33]
+*[14.33]* The effects of terrain (including fortifications) are not
 cumulative; the defending Player must choose the best terrain. However, the
 effects of terrain across a hexside are in addition to those within the hex.
 
-[#14_34]*[14.34]* No Anti-Armor fire may be directed from or against Phasing TOE
+[#14_34]
+*[14.34]* No Anti-Armor fire may be directed from or against Phasing TOE
 Strength Points assaulting through Ridges that are not crossed by tracks or
 roads, or down a Slope hexside uncrossed by a Road or Track, or down an
 Escarpment uncrossed bya Track.
 
-[#14_35]*[14.35]* If a terrain effect shifts the Anti-Armor Strength Point Row
+[#14_35]
+*[14.35]* If a terrain effect shifts the Anti-Armor Strength Point Row
 lower than '1', use the '0' row.
 
 [#14_4]
 === ASSESSING ANTI-ARMOR DAMAGE
 
-[#14_41]*[14.41]* All results on the Anti-Armor CRT (see Case <<14_6>>) are in
+[#14_41]
+*[14.41]* All results on the Anti-Armor CRT (see Case <<14_6>>) are in
 Damage Points. Damage Points are applied to the Armor Protection Ratings of any
 Armor TOE Strength Points in the hex being fired upon,
 
-[#14_42]*[14.42]* The Armor Protection Rating is the number of Damage Points that Point
+[#14_42]
+*[14.42]* The Armor Protection Rating is the number of Damage Points that Point
 can absorb before it is destroyed. All units comprising Points with an Armor
 Protection Rating may be affected by anti-tank fire and thus take losses because
 of it.
 
-[#14_43]*[14.43]* The Player undergoing Anti-Armor fire must remove at least as
+[#14_43]
+*[14.43]* The Player undergoing Anti-Armor fire must remove at least as
 many TOE Strength Points as are affected by absorbing Damage Points.  Thus,
 armor units with higher Armor Protection Ratings can absorb more Damage Points
 and are thus harder to destroy.
@@ -144,23 +162,28 @@ least seven Damage Points. He therefore destroys one TOE point of M/13 (3 Armor
 Protection Rating) and two M/11's, (2 Armor Protection times 2 = 4) to cover the
 necessary seven point absorbtion.
 
-[#14_44]*[14.44]* Armor losses may be taken from any units with an Armor
+[#14_44]
+*[14.44]* Armor losses may be taken from any units with an Armor
 Protection Rating in the target hex, regardless of whether they were assigned to
 AntiArmor or Close Assault. However, Armor units withheld from both types of
 combat are not affected by Anti-Armor Fire (see Case <<13_28>>).
 
-[#14_45]*[14.45]* Damage Points in excess of those necessary to destroy all
+[#14_45]
+*[14.45]* Damage Points in excess of those necessary to destroy all
 armor units in a hex are ignored.
 
-[#14_46]*[14.46]* Destroyed Tanks are noted with Destroyed Tank Markers, which
+[#14_46]
+*[14.46]* Destroyed Tanks are noted with Destroyed Tank Markers, which
 cannot move but may be retrieved during the Repair Segment.  Players should
 record precisely what each Destroyed Tank marker represents (see Case <<14_5>>).
 
-[#14_47]*[14.47]* Self-propelled guns may absorb antiarmor Damage Points at a
+[#14_47]
+*[14.47]* Self-propelled guns may absorb antiarmor Damage Points at a
 rate equal to their Armor Protection Rating plus their Vulnerability Rating
 (modified if necessary if the point is engaging in anti-armor fire, etc.)
 
-[#14_48]*[14.48]* If the owning Player's only TOE Strength Points in the hex
+[#14_48]
+*[14.48]* If the owning Player's only TOE Strength Points in the hex
 (assaulting or defending against assault) that could be affected by anti-armor
 fire are halftracks (i.e., certain motorized axis leg infantry units), the
 halftracks double their Armor Protection Rating. Note that losses of halftracks
@@ -170,24 +193,29 @@ Point(s) as well.
 [#14_5]
 === CAPTURING ENEMY DESTROYED TANKS
 
-[#14_51]*[14.51]* Friendly Players may capture (and repair) Enemy Tank Units
+[#14_51]
+*[14.51]* Friendly Players may capture (and repair) Enemy Tank Units
 (only destroyed tanks may be captured; all other destroyed vehicles are removed
 immediately).
 
-[#14_52]*[14.52]* If an Enemy Player enters a hex containing a Destroyed Tank
+[#14_52]
+*[14.52]* If an Enemy Player enters a hex containing a Destroyed Tank
 Marker, and there are no other Friendly combat units in that hex, the Enemy must
 decide immediately whether to permanently eliminate the Points or thenceforth
 consider them captured.
 
-[#14_53]*[14.53]* Captured Destroyed Tanks may be moved three hexes in any
+[#14_53]
+*[14.53]* Captured Destroyed Tanks may be moved three hexes in any
 direction by the capturing Player at the instant of capture. The three hexes may
 not include Enemy units or Enemy ZOC's; nor may they include impassable terrain.
 
-[#14_54]*[14.54]* Except for <<14_53>>, Destroyed Tanks are treated like any
+[#14_54]
+*[14.54]* Except for <<14_53>>, Destroyed Tanks are treated like any
 other unit marked for possible Repair. In the Phasing Player's Repair Phase they
 may be towed to a Repair Facility for Maintenance.
 
-[#14_55]*[14.55]* Players should note that there is a subtle difference between
+[#14_55]
+*[14.55]* Players should note that there is a subtle difference between
 capturing Destroyed Tanks and capturing Broken down Vehicles. Consult Section
 <<21_5>> for a discussion of this.
 
