--- a/section-15.adoc
+++ b/section-15.adoc
@@ -38,29 +38,34 @@ CASES:
 [#15_1]
 === WHICH UNITS MAY PARTICIPATE IN CLOSE ASSAULT
 
-[#15_11]*[15.11]* All units which possess a Close Assault Rating may use their
+[#15_11]
+*[15.11]* All units which possess a Close Assault Rating may use their
 ratings to aid in either Offensive Assault or Defense Against Assault. (Units
 without Ratings may also participate, even though they add nothing to the point
 total; see Case <<15_17>>.)
 
-[#15_12]*[15.12]* Pinned units and units retreated before assault into a hex
+[#15_12]
+*[15.12]* Pinned units and units retreated before assault into a hex
 under Close Assault attack may not add their Ratings to Defensive Close Assault.
 However, the TOE strengths of such defending units are considered for purposes
 of determining casualties vis a vis the number of TOE Strength Points in a hex,
 a percentage of which will be eliminated. This pertains only to non-Phasing
 defending units.
 
-[#45_13]*[45.13]* Guns that are Back are not affected by Close Assault unless
+[#45_13]
+*[45.13]* Guns that are Back are not affected by Close Assault unless
 there is an Overrun situation (see Case <<15_86>>). Guns that are Forward may
 participate in Offensive or Defensive Close Assault, but their Vulnerability
 Ratings may be affected (see Case <<12_18>>).
 
-[#15_14]*[15.14]* Only those units committed to Close Assault (either Offense or
+[#15_14]
+*[15.14]* Only those units committed to Close Assault (either Offense or
 Defense) may add their Ratings to the total Assault Ratings. However, certain
 non-Phasing units may be affected by results even though they do not participate
 (see Cases <<15_12>>, and <<15_15>>).
 
-[#15_15]*[15.15]* Units that are out of ammunition may not Close Assault, either
+[#15_15]
+*[15.15]* Units that are out of ammunition may not Close Assault, either
 offensively or defensively.  However, as in Case <<15_12>>, such units are
 considered when determining percentage losses if they are non-Phasing defending
 units. Phasing units that are out of ammunition are simply ignored. If all
@@ -68,14 +73,16 @@ non-Phasing, defending units in a hex are out of ammunition for Close Assault
 purposes, and such units are Assaulted, they automatically Surrender en masse
 (i.e., every unit in the hex Surrenders).
 
-[#15_16]*[15.16]* A given Phasing unit may split its TOE Strength Points and
+[#15_16]
+*[15.16]* A given Phasing unit may split its TOE Strength Points and
 make one Close Assault with some Points and another with the rest, or simply
 withhold a portion from any Offensive Close Assault. A non-Phasing Player may
 withhold individual TOE Strength Points, too, but, unlike Phasing units, these
 Points are considered in determining percentage losses. Note: The same hex may
 never be Close Assaulted more than once per Combat Segment.
 
-[#15_17]*[15.17]* Units with Close Assault Ratings in parentheses may use those
+[#15_17]
+*[15.17]* Units with Close Assault Ratings in parentheses may use those
 ratings in combat only if they occupy a hex that is unoccupied by combat units.
 Such units do not include their TOE Strength for determining losses when they
 occupy a hex with combat units un/ess the "losing" Player so wishes.  In such a
@@ -85,7 +92,8 @@ two hexes in the same Close Assault at the same time, and one of the hexes
 contains solely a unit with parenthesized Defensive Close Assault Rating, that
 defending unit may use its parenthesized rating in that combat.
 
-[#15_18]*[15.18]* In a Close Assault involving only nonPhasing units with only
+[#15_18]
+*[15.18]* In a Close Assault involving only nonPhasing units with only
 parenthesized Close Assault Ratings, if the attacking force has a Raw Offensive
 Close Assault strength at least three times the defending parenthesized units'
 Raw Defensive Close Assault strength the following two effects apply:
@@ -103,30 +111,35 @@ detachment, but it will most likely be overrun by anything larger.
 [#15_2]
 === HOW CLOSE ASSAULT OCCURS
 
-[#15_21]*[15.21]* Phasing units with Offensive Close Assault Ratings may Close
+[#15_21]
+*[15.21]* Phasing units with Offensive Close Assault Ratings may Close
 Assault any Enemy units in adjacent hexes, unless Assault is prohibited by
 terrain (see Case <<15_3>>). Units assigned to Anti-Armor may sot participate in
 Close Assault (however, see Case <<14_23>>).
 
-[#15_22]*[15.22]* The Phasing Player announces which hexes he is assaulting, and
+[#15_22]
+*[15.22]* The Phasing Player announces which hexes he is assaulting, and
 both Players determine their respective total Points, The Phasing Player states
 whether his attack constitutes a Close Assault or a Probe (see Case <<15_9>>),
 and then each individual assault is resolved sequentially, with results being
 taken as they occur.
 
-[#15_23]*[15.23]* An Enemy-occupied hex may be Close Assaulted or Probed only
+[#15_23]
+*[15.23]* An Enemy-occupied hex may be Close Assaulted or Probed only
 once per Combat Segment, regardless of the number of units in that
 hex. The Phasing Player may not attack some of the units in that hex with one
 group and some others with another group.
 
-[#15_24]*[15.24]* As many units from as many hexes as are adjacent to an
+[#15_24]
+*[15.24]* As many units from as many hexes as are adjacent to an
 Enemy-occupied hex may attack that hex, terrain permitting. Furthermore, a
 Phasing unit may Close Assault more than one hex at the same time, as long as
 the assaulted hexes are all adjacent to both the hex from which the assault
 initiates as well as adjacent to each other. The units that may participate are
 listed in Case <<15_1>>.
 
-[#15_25]*[15.25]* Any number of TOE Strength Points from a unit may be assigned
+[#15_25]
+*[15.25]* Any number of TOE Strength Points from a unit may be assigned
 to a given Close Assault (see Case <<15_16>>); however, if the units making a
 given Close Assault have committed less than 50% of their available TOE Strength
 Points, that Close Assault is automatically considered a Probe and not a Close
@@ -141,14 +154,16 @@ problems. Neither assault is a full Close Assault; both are Probes. If he used 3
 Points against Hex A instead of 2, both would be considered Full Assaults, as he
 would have used at least 50% of his available strength somewhere.
 
-[#15_26]*[15.26]* Each Player determines which of his units are participating in
+[#15_26]
+*[15.26]* Each Player determines which of his units are participating in
 a given Close Assault. Each Player then determines his Actual Close Assault
 Strength Points, as stated in Case <<15_4>>. The defending, non-Phasing Player
 now subtracts his total from that of the attacking, Phasing Player to achieve
 the Basic Assault Differential. Thus, if the Attacker has 6 points and the
 Defender eight, the Basic Assault Differential would be -2.
 
-[#15_27]*[15.27]* The Basic Assault Differential is now adjusted, where
+[#15_27]
+*[15.27]* The Basic Assault Differential is now adjusted, where
 necessary, for Terrain Effects (Case <<15_3>>), Morale (Case <<15_6>>), or Units
 Size Differential (Case <<15_5>>). These effects result in an adjustment of the
 Differential Co/umn (not the Differential number) either one way or the other,
@@ -158,13 +173,15 @@ the Assault. Consult the Procedure, Section <<15_0>>.  Remember, the two dice
 are read sequentially (6 and 2= 62) not mathematically (6 and 2 = 8) in Assault
 Combat.
 
-[#15_28]*[15.28]* In Close Assault (and Probe) only, if one Player has fewer
+[#15_28]
+*[15.28]* In Close Assault (and Probe) only, if one Player has fewer
 than 5 Raw Assault Points, he is considered to have zero Close Assault Points,
 and the Differential is determined from that figure. If each Player has fewer
 than 10 Raw Strength Points, the Raw Assault Strength Points are used as if they
 were Actual Assault Strength Points (see also Case <<15_51>>).
 
-[#15_29]*[15.29]* There is a possibility that one or both Players do not
+[#15_29]
+*[15.29]* There is a possibility that one or both Players do not
 allocate any units to Assault. In such cases the following occurs:
 
 . If the Defender/Non-Phasing Player, for any
@@ -175,15 +192,17 @@ retreat three hexes and earn three Disorganization Points (as if it had taken
 . If the Attacker/Phasing Player does not allocate any units to Assault there is no Assault;
 it is ignored. This can occur only under Case <<10_31>> et seq;
 
-[#18_3]
+[#15_3]
 === TERRAIN EFFECTS ON CLOSE ASSAULT
 
-[#15_31]*[15.31]* The terrain which a defending unit occupies, or which an
+[#15_31]
+*[15.31]* The terrain which a defending unit occupies, or which an
 attacking unit has to cross, may increase or decrease the differential in favor
 of the attacker/Phasing Player. Players should consult the Terrain Effects Chart
 (Case <<8_37>>) for a complete list of all effects on Assault combat.
 
-[#15_32]*[15.32]* The terrain in a hex occupied by a unit is defending against
+[#15_32]
+*[15.32]* The terrain in a hex occupied by a unit is defending against
 full Close Assault or Probe either has vo effect on the Differential (e.g.,
 Clear Terrain or Sand/Gravel Terrain) or it will decrease the Differential vis a
 vir the Attacker by a specific number of columns on. the Assault Differential
@@ -193,14 +212,16 @@ Assault in which the Basic Assault Differential is + 4 will be Assaulted in the
 (Players should note that a unit defending in a Salt Marsh hex shifts the column
 one in favor of the Attacker.)
 
-[#15_33]*[15.33]* Assaults across certain types of hexsides also decrease or
+[#15_33]
+*[15.33]* Assaults across certain types of hexsides also decrease or
 increase the Differential vis a vis the Attacker/Phasing Player; e.g., a unit
 attacking through a Wadi hexside has its Attack Differential decreased by one,
 in addition to any changes for the hex the defender is in. If any units are
 attacking through a given hexside, the Differential is adjusted as if a// units
 were attacking through that hexside.
 
-[#15_34]*[15.34]* Certain terrain prohibits full Close Assaults or Probes by
+[#15_34]
+*[15.34]* Certain terrain prohibits full Close Assaults or Probes by
 certain types of units.  Motorized units may never assault up an Escarpment,
 even if it is crossed by a Track. (You may, of course, take your infantry out of
 the Trucks and then Assault.) Motorized units may not assault units defending in
@@ -208,7 +229,8 @@ Salt Marshes. Any combat unit in the Zone of Control of an Enemy unit which it
 cannot attack must be retreated one hex, unless some other unit attacks that
 Enemy unit.
 
-[#15_35]*[15.35]* Terrain effects on Close Assault are cumulataive, with one
+[#15_35]
+*[15.35]* Terrain effects on Close Assault are cumulataive, with one
 exception. The defender may benefit from only one type of hexside (<<15_33>>) unless
 a unit is actually assaulting through a hexside which contains two types of
 terrain. The latter is quite rare, occurring mostly down in the southern areas
@@ -223,7 +245,8 @@ Terrain, and two for the Ridge hexside. (This is obviously a good position, one
 that should be assaulted only after being softened up by Barrage and Air
 Bombardment).
 
-[#15_36]*[15.36]* Assaults down slopes or down escarpments benefit the attacker.
+[#15_36]
+*[15.36]* Assaults down slopes or down escarpments benefit the attacker.
 (See Case <<8_37>>, Terrain Effects Chart). If a unit is being attacked through
 both an up slope and a down slope hexside (this is quite possible in some areas
 of the game-map), the benefit to the attacker is offset by the benefit to the
@@ -258,7 +281,8 @@ of organization, the greater the benefit (in terms of a Column Shift on the
 Assault Differential Combat Results Table) to the larger unit. This is another
 rule that reflects the effects of organization and combined arms.
 
-[#15_51]*[15.51]* If, regardless of the Basic Close Assault Differential, one
+[#15_51]
+*[15.51]* If, regardless of the Basic Close Assault Differential, one
 side has at least twice the number of Raw Close Assault Strength Points as the
 other, the superior side adjusts the Assault Differential on the Combat Results
 Table two columns (not numbers) in its favor.
@@ -271,12 +295,14 @@ twice the Raw strength of the defender, he would assault on the +3 Column. This
 adjustment always applies, regardless of any other adjustment to the
 differential (exception: Case <<15_54>>).
 
-[#15_52]*[15.52]* If the largest (regardless of number of units involved) unit
+[#15_52]
+*[15.52]* If the largest (regardless of number of units involved) unit
 in terms of organization of one side in an assault is bigger than the largest
 unit organization on the other side there will be a column shift benefitting the
 side with the larger unit. Unit equivalents apply here (see Case <<9_2>>).
 
-[#15_53]*[15.53]* The column adjustments for Organizational Size Difference,
+[#15_53]
+*[15.53]* The column adjustments for Organizational Size Difference,
 always in favor of the larger unit size, are as follows:
 
 .Largest Unit On:
@@ -295,7 +321,8 @@ always in favor of the larger unit size, are as follows:
 
 All of the above are equivalents (<<9_2>>).
 
-[#15_54]*[15.54]* There are certain combat units that have no Defensive Close
+[#15_54]
+*[15.54]* There are certain combat units that have no Defensive Close
 Assault Ratings (e.g., Commonwealth 5.5" howitzers, German 210mm Howitzers).
 If such a unit is alone in a hex and is Close Assaulted by an Enemy unit, such
 zero-rated unit is considered to have a Defensive Close Assault Rating of zero.
@@ -304,7 +331,8 @@ casualties; and (2) there is a three-column adjustment in favor of the Attacker,
 in addition to any adjustments for <<15_53>>. Case <<15_51>> does not apply to
 this situation.
 
-[#15_55]*[15.55]* For the purposes of this case a brigade is attached to a
+[#15_55]
+*[15.55]* For the purposes of this case a brigade is attached to a
 division only if the brigade HQ unit (counter) is attached to the division. For
 example, a Commonwealth infantry division with nine infantry battalions and no
 infantry brigade headquarters attached is a shell in Close Assault. Note that
@@ -318,23 +346,27 @@ The Morale of each side involved in a given Close Assault will affect the Close
 Assault Differential.  A complete discussion of Morale is to be found in Section
 <<17_0>>.
 
-[#15_61]*[15.61]* Players first determine their individual Adjusted Morale
+[#15_61]
+*[15.61]* Players first determine their individual Adjusted Morale
 Rating for that assault (Case <<17_2>>). The Phasing/Assaulting Player then
 subtracts the Adjusted Morale Rating of the nonPhasing/Defending units from
 that of the Phasing units. This Final Adjusted Morale number is the number by
 which the Assault Differential Column will be adjusted. (See Case <<15_64>>).
 
-[#15_62]*[15.62]* A positive (+) Final Adjusted Morale Rating adjusts the
+[#15_62]
+*[15.62]* A positive (+) Final Adjusted Morale Rating adjusts the
 Assault Differential that number of columns to the right (in favor of the
 Phasing Player/Attacker). A negative (-) Final Adjusted Morale Rating adjusts
 the Assault Differential that number of columns to the left (in favor of the
 non-Phasing/ Defending Player).
 
-[#15_63]*[15.63]* Players should use the "largest unit”' rule, as espoused in
+[#15_63]
+*[15.63]* Players should use the "largest unit”' rule, as espoused in
 Case <<6_27>>, to determine Morale Ratings for units with different Morale in
 the same assault.
 
-[#15_64]*[15.64]* Following is an extended example of how Morale would affect a
+[#15_64]
+*[15.64]* Following is an extended example of how Morale would affect a
 given Close Assault:
 
 a. The 15th Panzer Division (Morale of +3) and the Ariete Division (Morale of
@@ -363,14 +395,16 @@ will be modified (by Morale) one column in favor of the defender.
 [#15_7]
 === HOW TO USE THE CLOSE ASSAULT COMBAT RESULTS TABLE
 
-[#15_71]*[15.71]* The Close Assault Combat Results Table is a massive Combat
+[#15_71]
+*[15.71]* The Close Assault Combat Results Table is a massive Combat
 Results Table that uses, for each Player, the roll of two dice added three
 different ways to determine a great number of results.  It is important to
 remember that each Player throws the two dice only once per assault, with one
 minor exception (Case <<15_73>>d). Players should consult the Assault Combat
 Results Table and become familiar with it before playing.
 
-[#15_72]*[15.72]* The columns of the Assault Combat Results Table are the
+[#15_72]
+*[15.72]* The columns of the Assault Combat Results Table are the
 Assault Differentials (see Cases <<15_26>> and <<15_27>>). The rows are
 percentage of losses possible. The numbers in the center of the Combat Results
 Table are the range of numbers needed to produce the losses (in the rows) under
@@ -379,7 +413,8 @@ bottoms of each column: Engaged, Retreat (Defender only), and Captured
 Possibilities. These are determined from the same diceroll as determines the
 losses.
 
-[#15_73]*[15.73]* The Close Assault Combat Results Table uses two dice thrown
+[#15_73]
+*[15.73]* The Close Assault Combat Results Table uses two dice thrown
 once for each Player to determine all results as follows:
 
 [lowercase]
@@ -419,18 +454,22 @@ the Prisoners Captured Results Table (15.89). In this case, if the Defender
 threw a 4, 50% of all his losses rounded up (the 20% of his force) would have
 been Captured by the Attacker.
 
-[#15_74]*[15.74]* If, for some reason, botha Retreat and an Engaged result
+[#15_74]
+*[15.74]* If, for some reason, botha Retreat and an Engaged result
 occurs in the same Close Assault, the Retreat takes priority, and the Engaged
 result is ignored.
 
-[#15_75]*[15.75]* The Attacker and the Defender each roll two dice to determine
+[#15_75]
+*[15.75]* The Attacker and the Defender each roll two dice to determine
 their results. Both Players use the same Differential column, but they each use
 their own section of the Combat Results Table.
 
-[#15_76]*[15.76]* If the diceroll produces a zero loss result, Engaged or
+[#15_76]
+*[15.76]* If the diceroll produces a zero loss result, Engaged or
 Retreat results may still occur.
 
-[#15_77]*[15.77]* The +11 to +17 et seq columns of the Assault Combat Results
+[#15_77]
+*[15.77]* The +11 to +17 et seq columns of the Assault Combat Results
 Table comprise the Overrun section of the Combat Results Table. Overrun is not a
 voluntary action (as in most games). Overrun in CNA indicates that the Attacker
 has amassed such overwhelming strength that he has broken through the defensive
@@ -438,13 +477,15 @@ line of the Defender, wreaking comparable losses and enabling him to reach and
 possibly destroy many of the defender's guns (see Cases <<15_84>> and
 <<15_86>>). In addition, when Overrun, all Defender losses are rounded up.
 
-[#15_78]*[15.78]* The Assault Combat Results Table is a large and seemingly
+[#15_78]
+*[15.78]* The Assault Combat Results Table is a large and seemingly
 unwieldy Table. However, it is not difficult to work with, and once the Players
 understand the mechanics of the different dicerolls and the method of
 determining losses, they will find that the Assault Combat Results Table
 produces an unusually wide variety of results.
 
-[#15_79]*[15.79]* Close Assault Combat Results Table
+[#15_79]
+*[15.79]* Close Assault Combat Results Table
 
 (see Charts and Tables)
 
@@ -453,7 +494,8 @@ produces an unusually wide variety of results.
 
 Eng
 
-[#15_81]*[15.81]* An Engaged result means that all units involved in that
+[#15_81]
+*[15.81]* An Engaged result means that all units involved in that
 assault are locked in combat. There are extended Capability Point penalties for
 an Engaged unit leaving an Enemy ZOC (see Case 8.6). Players should place an
 Engaged marker on all units affected to indicate their status. Engaged markers
@@ -461,7 +503,8 @@ are removed at the end of the Operations Stage. (Players should note that all
 units that had assault and are still adjacent are in Contact, if they are not
 Engaged.)
 
-[#15_82]*[15.82]* A Retreat of a specific number of hexes means that the
+[#15_82]
+*[15.82]* A Retreat of a specific number of hexes means that the
 affected units (including any units in that hex withheld from combat for any
 reason, such as Pinned or out of ammo) must move a minimum of that number of
 hexes away from the Enemy unit inflicting the Retreat. They must end the Retreat
@@ -472,7 +515,8 @@ suffer an additional 10% loss. Retreats cost Capability Points. Units in major
 cities (or retreated into a major city) may ignore retreat results (or the rest
 of any retreat result).
 
-[#15_83]*[15.83]* Percentage Losses are determined in the following manner:
+[#15_83]
+*[15.83]* Percentage Losses are determined in the following manner:
 
 a. The Player affected determines the percentage loss from the Assault Combat
 Results Table then
@@ -484,8 +528,8 @@ a/l Defensive units withheld for any reason are added in.
 
 c. Multiply the percentage of loss times the Total Raw Strength Points. The
 Attacker rounds up to the nearest whole number, while the Defender rounds down
-(but see Case <<15_77>>). Thus a <<35_1>> would be 36 points for the Attacker
-but 35 for the Defender. In an overrun, <<1_1>> Defender Points would equal 2.
+(but see Case <<15_77>>). Thus a 35.1 would be 36 points for the Attacker
+but 35 for the Defender. In an overrun, 1.1 Defender Points would equal 2.
 Defenders should remember to add in any loss percentage they must take for hexes
 not retreated (see Case <<15_82>>).
 
@@ -503,7 +547,8 @@ of the Raw Strength Points used by the Phasing Player in a Close Assault are in
 one hex and 50% are in a second hex, any losses would be divided evenly between
 both hexes.
 
-[#15_84]*[15.84]* Guns (i.e., Artillery, Anti-Tank units, etc.) take losses in
+[#15_84]
+*[15.84]* Guns (i.e., Artillery, Anti-Tank units, etc.) take losses in
 Close Assault under the following circumstances:
 
 a. If the Defending units are Overrun all defending guns, whether Forward or
@@ -523,13 +568,15 @@ c. In addition to (a), if there is an Overrun situation, all defending guns are
 subject to Vulnerability losses, as in (b). Vulnerability losses are taken after
 percentage losses (a).
 
-[#15_85]*[15.85]* If, as a result of an Assault, a Player has some of his TOE
+[#15_85]
+*[15.85]* If, as a result of an Assault, a Player has some of his TOE
 Strength Points Captured (see Case <<15_73>>) he takes that percentage of his
 losses as determined in Cases <<15_83>> and <<15_84>> and converts them to
 prisoners or captured equipment, which are then turned over to the Enemy Player.
 Captured percentages are always rounded upwards.
 
-[#15_86]*[15.86]* Determine Captured TOE Strength Points as follows:
+[#15_86]
+*[15.86]* Determine Captured TOE Strength Points as follows:
 
 a. First determine what TOE Strength Points (and concurrently what units) have
 been eliminated by combat; then
@@ -545,43 +592,52 @@ d. Captured infantry-type becomes Prisoner Points, one Prisoner Point for each
 TOE Strength Point. Captured Guns and/or Tanks may be taken and used by the
 Enemy as they see fit (see <<28_0>>, on Prisoners).
 
-[#15_87]*[15.87]* If any Player's losses amount to 30% or more of the TOE
+[#15_87]
+*[15.87]* If any Player's losses amount to 30% or more of the TOE
 Strength Points committed to that assault (whether such losses came from
 committed units or not), all of that Player's units involved gain three
 Disorganization Points. It is faintly possible that both Players could be so
 affected, and this is allowed.
 
-[#15_88]*[15.88]* A Player may always voluntarily Surrender his units, rather
+[#15_88]
+*[15.88]* A Player may always voluntarily Surrender his units, rather
 than have them slaughtered. Furthermore, units. out of Ammunition or with a -17
 or worse Cohesion Level that are assaulted automatically Surrender (see also
 Case <<17_25>>).
 
-[#15_89]*[15.89] Prisoners Captured Results Tables*
+[#15_89]
+*[15.89] Prisoners Captured Results Tables*
 
 (See Charts and Tables)
 
 [#15_9]
 === PROBES
 
-[#15_91]*[15.91]* A Probe is any Close Assault conducted (by the Phasing Player)
+[#15_91]
+*[15.91]* A Probe is any Close Assault conducted (by the Phasing Player)
 with less than 50% of his available TOE Strength Points participating in that —
 or another — attack (see Case <<10_31>> and <<15_25>>).
 
-[#15_92]*[15.92]* A Probe may be conducted with any number of units, within the
+[#15_92]
+*[15.92]* A Probe may be conducted with any number of units, within the
 restrictions of Case <<15_91>>.
 
-[#15_93]*[15.93]* All combat results are the same for both sides, with the
+[#15_93]
+*[15.93]* All combat results are the same for both sides, with the
 exception that all Engaged results are ignored, and the units in the Probe —
 both offense and defense — are notin Contact.
 
-[#15_94]*[15.94]* The "Probing" Player does not have to announce that his
+[#15_94]
+*[15.94]* The "Probing" Player does not have to announce that his
 assault is a Probe until after the assault is over. Remember, all units are
 assigned to Close Assault prior to Anti-Armor Combat.
 
-[#15_95]*[15.95]* If all Probing units are Recce-type units, any losses from
+[#15_95]
+*[15.95]* If all Probing units are Recce-type units, any losses from
 Close Assault to the Probing units are reduced by 10%.
 
-[#15_96]*[15.96]* If, in a Probe, the Final Adjusted Differential is worse than
+[#15_96]
+*[15.96]* If, in a Probe, the Final Adjusted Differential is worse than
 -3, the units defending against the Probe do not use any Capability Points to
 defend against such Probe.
 
