--- a/section-20.adoc
+++ b/section-20.adoc
@@ -18,28 +18,33 @@ CASES:
 [#20_1]
 === REINFORCEMENTS
 
-[#20_11]*[20.11]* Reinforcements are new, whole units that arrive as specified
+[#20_11]
+*[20.11]* Reinforcements are new, whole units that arrive as specified
 by the Reinforcement Track.  Thus, in the September 3/2, Operations Stage,
 the Commonwealth Player receives the 6th New Zealand Brigade (and its three
 battalions) as well as the 6th NZ Field Artillery Regiment.
 
-[#20_12]*[20.12]* Reinforcements enter the game at the beginning of the Naval
+[#20_12]
+*[20.12]* Reinforcements enter the game at the beginning of the Naval
 Convoy Arrival Phase of the Operations Stage. There is no Capability Point cost
 for debarking; arriving units may be moved in the first Operations Stage of
 arrival. (The arrival dates have been adjusted to account for the logistical
 problems of debarkation, etc.) Units do not pay a Capability Point cost for the
 first hex they are placed in.
 
-[#20_13]*[20.13]* Reinforcements are treated as any other units as soon as they
+[#20_13]
+*[20.13]* Reinforcements are treated as any other units as soon as they
 have arrived, and they may perform any and all game functions normally.
 
-[#20_14]*[20.14]* Commonwealth reinforcements, unless noted below, arrive at
+[#20_14]
+*[20.14]* Commonwealth reinforcements, unless noted below, arrive at
 Cairo. Layforce Commando unit (Game-Turn 19) and the Tiger Convoy (Game-Turn 32)
 of Tank Replacement Points (which are reinforcements) arrive in Alexandria.
 Returning withdrawn units arrive at Cairo or Alexandria at the Commonwealth
 Player's option (subject to stacking restrictions).
 
-[#20_15]*[20.15]* All Axis reinforcements arrive in Tripoli, However, if there
+[#20_15]
+*[20.15]* All Axis reinforcements arrive in Tripoli, However, if there
 are no Commonwealth land combat units west of Mersa Matruh (inclusive) then the
 Axis Player may divert forces to Benghazi. The Axis Player may bring in one
 battalion-equivalent combat unit or two companyequivalent combat units and up to
@@ -60,7 +65,8 @@ only — in accordance with the Commonwealth Production System (see Case
 <<20_7>>). All Replacement Points, regardless of the method in which they enter
 the game, are covered by the same restrictions as listed in this Case.
 
-[#20_21]*[20.21]* All Replacement Points "arrive" in the Naval Convoy Arrival
+[#20_21]
+*[20.21]* All Replacement Points "arrive" in the Naval Convoy Arrival
 Phase of an Operations Stage. Replacement Points mandated by the Reinforcement
 Track arrive in a particular Stage of a particular Game-Turn as designated.
 Replacement Points from the Axis Replacement Points Pool arrive in a particular
@@ -70,15 +76,18 @@ Commonwealth Production also arrive in particular Stages as determined by the
 Commonwealth Player; these must be determined four Game-Turns in advance (see
 Case <<20_7>>).
 
-[#20_22]*[20.22]* Commonwealth Replacement Points may be—rarely—listed on the
+[#20_22]
+*[20.22]* Commonwealth Replacement Points may be—rarely—listed on the
 Reinforcement Track.They are designated by type (e.g., the Commonwealth Player
 will receive "27 points of Matildas," not merely "27 points of tanks").
 
-[#20_23]*[20.23]* Replacement Points that are available in the Axis Replacement
+[#20_23]
+*[20.23]* Replacement Points that are available in the Axis Replacement
 Pool are designated by type only. He is limited as to how many points of each
 type may be brought in during any one turn. See the Axis Replacement Pool.
 
-[#20_24]*[20.24]* Similarly, Replacement Points available according to the
+[#20_24]
+*[20.24]* Similarly, Replacement Points available according to the
 Commonwealth Production System are designated by type and limited as to
 availability.
 
@@ -90,7 +99,8 @@ availability.
 [#20_4]
 === HOW REPLACEMENT POINTS
 
-[#20_41]*[20.41]* Trained Replacement Points may be assigned to (and absorbed
+[#20_41]
+*[20.41]* Trained Replacement Points may be assigned to (and absorbed
 by) a unit any place on the game-map (even in an Enemy Zone of Control).
 However, the Replacement Point and the receiving unit must be in the same hex.
 This means that "Mohammed usually goes to the Mountain,”' rather than the
@@ -98,7 +108,8 @@ latter. Points must be assigned for eventual delivery to specific units
 immediately upon arrival. Should the designated unit be eliminated, or
 withdrawn, such points must be reassigned immediately.
 
-[#20_42]*[20.42]* Counters are provided to represent the Replacement Points.
+[#20_42]
+*[20.42]* Counters are provided to represent the Replacement Points.
 Replacement Point counters have all the characteristics of an actual unit, with
 several major exceptions:
 
@@ -114,7 +125,8 @@ d. They may never exceed their Capability Point Aliowance (which is that of the
 unit they are being assigned to); if they ever exceed their CPA — for any reason
 — they are considered to have a Cohesion Level of — 26.
 
-[#20_43]*[20.43]* Replacement Points (both Axis and Commonwealth) are required
+[#20_43]
+*[20.43]* Replacement Points (both Axis and Commonwealth) are required
 to undergo Training. They must train for a specific number of Operations Stages,
 which may include the Stage of arrival, Players should consult the rules on
 Training (<<17_3>>) for particulars, as the same rules that apply to Training
@@ -140,30 +152,36 @@ schedule for Replacement Training is as follows:
 *Note*: This has nothing to do with Commonwealth
 training for Morale.
 
-[#20_44]*[20.44]* In essence, within the parameters of Case <<20_42>>, Trained
+[#20_44]
+*[20.44]* In essence, within the parameters of Case <<20_42>>, Trained
 Infantry Replacement Points are usually trucked (if available) to the Front Line
 after undergoing Training, where they are transferred to the unit of
 assignation. Trained Tank, Gun and Recce Replacement Points may move on their
 own, use Railroads (Commonwealth), etc.
 
-[#20_45]*[20.45]* Like other normal units, Replacement Points require Stores and
+[#20_45]
+*[20.45]* Like other normal units, Replacement Points require Stores and
 Fuel (if vehicles) when moving. Remember, five Replacement Points is the
 equivalent of a battalion for all purposes. They can be assigned ammunition, but
 this is pretty much a waste of supplies, given the maxims of Case <<20_42>>.
 
-[#20_46]*[20.46]* Replacement Points moving toward the Front for purposes of
+[#20_46]
+*[20.46]* Replacement Points moving toward the Front for purposes of
 assignment are considered Truck Convoys and move only in the Truck Convoy
 Movement Phase.
 
-[#20_47]*[20.47]* Players should use the Replacement Point Availability and
+[#20_47]
+*[20.47]* Players should use the Replacement Point Availability and
 Assignment Sheets for keeping track of what is happening with their Replacement
 Points.
 
-[#20_48]*[20.48]* The cost in Capability Points to attach Replacement Points to
+[#20_48]
+*[20.48]* The cost in Capability Points to attach Replacement Points to
 units is listed on the Capability Point Cost Summary (<<6_3>>) Replacement Point
 units are considered as Assigned units for this purpose.
 
-[#20_49]*[20.49]* Replacement Points may be absorbed only during the
+[#20_49]
+*[20.49]* Replacement Points may be absorbed only during the
 Reorganization Segment. They then acquire the assigned unit's cohesion,
 breakdown and other levels.
 
@@ -176,7 +194,8 @@ trucks mostly equipped with antipersonnel weapons. As the war progressed, this
 equipment was often upgraded with the addition of light tanks and better-armed
 cars and carriers.  This rule reflects that increase in effectiveness.
 
-[#20_51]*[20.51]* All armored reconnaissance and armored car (i.e., Italian ID
+[#20_51]
+*[20.51]* All armored reconnaissance and armored car (i.e., Italian ID
 Code "ww" German ID Code "go" and Commonwealth ID Code "hh" thru "tt"
 inclusive) units that arrive/deploy with an Anti-armor Rating of zero (even
 those also possessing an Offensive Close Assault Rating of "3" — see Case
@@ -186,23 +205,27 @@ this purpose, the 18th Brigade of the 7th Australian Division is. considered a
 division) may be upgraded (i.e., the 51st Recce Regiment of the 51st Highland
 division could not be upgraded).
 
-[#20_52]*[20.52]* To upgrade an Armored Recce or A/C unit, the Player simply
+[#20_52]
+*[20.52]* To upgrade an Armored Recce or A/C unit, the Player simply
 adds one TOE Strength Point of certain types of tanks (as listed in <<20_53>>)
 to the Recce or A/C units, remembering that the unit may never exceed its stated
 TOE maximum.  Thus, he may add the TOE to replace a lost TOE Point, or he may
 simply add the Tank TOE in and not increase the TOE Strength Points, if the
 Recce or A/C unit is already at maximum level.
 
-[#20_53]*[20.53]* Commonwealth Players may use Stuarts to upgrade their Recce/AC
+[#20_53]
+*[20.53]* Commonwealth Players may use Stuarts to upgrade their Recce/AC
 units. German units may be upgraded by adding Pz JJ TOE points.  Italian units
 may be upgraded by adding M/11 or L6/40 Tank Points, or armored recce/armored
 car Replacement Points.
 
-[#20_54]*[20.54]* An "upgraded" Recce or A/C unit's TOE Strength Point has an
+[#20_54]
+*[20.54]* An "upgraded" Recce or A/C unit's TOE Strength Point has an
 Anti-Armor Rating of 1, instead of zero, and an Offensive Close Assault Rating
 of 3, instead of 2.
 
-[#20_55]*[20.55]* No units may be upgraded until 1/39, at the earliest.
+[#20_55]
+*[20.55]* No units may be upgraded until 1/39, at the earliest.
 
 [#20_6]
 === AXIS PLANNED REPLACEMENTS
@@ -210,53 +233,62 @@ of 3, instead of 2.
 Italian and German Replacement Points enter the game from the Axis Replacement
 Pool (<<20_66>>) as a result of direct planning by the Axis Player.
 
-[#20_61]*[20.61]* In the Axis Replacement Pool, the Axis Player will find the
+[#20_61]
+*[20.61]* In the Axis Replacement Pool, the Axis Player will find the
 maximum number of Replacement Points for each type of point for the entire
 Campaign Game. (Each Scenario lists the maximum available for that Scenario, if
 any). The Axis Player may never use more Replacement Points than are provided.
 This is further limited by the maximum points available per turn, per type.
 
-[#20_62]*[20.62]* The Axis Player may bring in any number of Replacement Points
+[#20_62]
+*[20.62]* The Axis Player may bring in any number of Replacement Points
 of any and all Classes during any one OpStage (see Case <<20_23>>) limited of
 course by the pool restrictions. However, each Replacement Point is counted
-against the Shipping Tonnage allowance for that Game-Turn (see Case <<51_5>>). The
+against the Shipping Tonnage allowance for that Game-Turn (see Case 51.5). The
 equivalent tonnage of each Point is given in the Pool Table. Thus, if the Axis
 Player wishes to bring in 10 Italian Infantry Replacement Points, he would need
 350 Tons of Shipping availability.
 
-[#20_63]*[20.63]* All Axis Replacement Points coming from the Axis Replacement
+[#20_63]
+*[20.63]* All Axis Replacement Points coming from the Axis Replacement
 Pool must be Planned for at least two turns in advance. In other words, Axis
 Planned Replacements for July, 1941 must be determined in the Naval Convoy
 Arrival Phase of the 1/III Game-Turn of June, 1941. Replacement planned in
 June III may arrive in any OP Stage Navel Convoy Arrival Phase of July I.
 
-[#26_64]*[26.64]* Replacement Points have priority in Shipping Space over any
+[#26_64]
+*[26.64]* Replacement Points have priority in Shipping Space over any
 type of supplies. The Axis Logistics Commander thus has to keep a close watch
 (and tight rein) on what he is shipping at what time, as he rarely knows that
 far in advance exactly how much shipping he will have available (see Section
 <<51_0>>). Remember, Axis Shipping is subject to Commonwealth air Raid, so keep
 aneye on Malta and the location of Commonwealth airfields.
 
-[#20_65]*[20.65]* Replacement Points may not be absorbed by units that have no
+[#20_65]
+*[20.65]* Replacement Points may not be absorbed by units that have no
 place for them, so remember to space your Replacements carefully.
 
-[#20_66]*[20.66] The Axis Replacement Pool Table*
+[#20_66]
+*[20.66] The Axis Replacement Pool Table*
 
 (see Charts and Tables)
 
-[#20_67]*[20.67] Axis Replacement Point Type Limitations Chart*
+[#20_67]
+*[20.67] Axis Replacement Point Type Limitations Chart*
 
 (see Charts and Tables)
 
 [#20_7]
 === COMMONWEALTH PRODUCTION
 
-[#20_71]*[20.71]* Most Commonwealth units and some of their Replacements arrive
+[#20_71]
+*[20.71]* Most Commonwealth units and some of their Replacements arrive
 via the Reinforcement Track. However, most -Replacements — mostly "drafts" and
 transport — arrive somewhat randomly as mandated by the Commonwealth Production
 Tables (<<20_78>>).
 
-[#20_72]*[20.72]* The Commonwealth Player must plan two months in advance
+[#20_72]
+*[20.72]* The Commonwealth Player must plan two months in advance
 (unless specified in a given Scenario) for the arrival of Replacement Points via
 Production. Thus, for Points required for August, 1942, the Commonwealth Player
 must plan — using the Production Systems. — in the first Naval Convoy Schedule
@@ -264,25 +296,30 @@ Phase of July, 1942. However, the Commonwealth Player always uses the
 Production Table for the month (one months in the future) in which he wishes his
 units to arrive — not the month in which he is consulting it.
 
-[#20_73]*[20.73]* The Commonwealth Production System functions like the Axis
+[#20_73]
+*[20.73]* The Commonwealth Production System functions like the Axis
 Pools except for Infantry and Truck Points. The Player uses a random dice roll
 to determine what Infantry and Truck Points he receives per turn, depending upon
 the date of arrival.
 
-[#20_74]*[20.74]* Replacement Points scheduled for any given turn must be
+[#20_74]
+*[20.74]* Replacement Points scheduled for any given turn must be
 divided among the OpStagesas evenly as possible. This refers to the total Points
 for all types. Thus the Commonwealth Player may bring 10 Medium Trucks in one
 OpStage and 10 Infantry Points in the next.
 
-[#20_75]*[20.75]* Replacement Points listed in the Reinforcement Schedule arrive
+[#20_75]
+*[20.75]* Replacement Points listed in the Reinforcement Schedule arrive
 in addition to any Production. The Commonwealth Player has no Shipping Problems;
 his Replacement Points simply arrive.
 
-[#20_76]*[20.76]* All Planned Replacements arrive in any hex in Cairo or
+[#20_76]
+*[20.76]* All Planned Replacements arrive in any hex in Cairo or
 Alexandria. They, like other Replacements, must undergo Training (see Case
 <<20_43>>).
 
-[#20_77]*[20.77]* The Commonwealth Player may “upgrade”? his Infantry units in
+[#20_77]
+*[20.77]* The Commonwealth Player may “upgrade”? his Infantry units in
 much the same fashion as his Recce/AC units. This applies only to infantry units
 with a 1/2 (Off/Def) Close Assau]t Rating. The Commonwealth Player simply
 uses one Infantry Replacement Point for each TOE Strength Point in the unit he
@@ -295,7 +332,8 @@ Points scheduled for upgrading need not be Trained. Once upgraded additional
 replacements assigned to that unit only require 1 Infantry Replacement Point per
 TOE Point, not 2 (1&1) Infantry Replacement Points.
 
-[#20_78]*[20.78] Commonwealth Production System*
+[#20_78]
+*[20.78] Commonwealth Production System*
 
 (see Charts and Tables)
 
@@ -307,24 +345,29 @@ elsewhere (Crete, Greece, Syria, Iraq, Cyprus, Sudan, etc.).  This is reflected
 in the Commonwealth Reinforcement Schedule, which tells the Commonwealth Player
 if, when, and how many units must be removed from the game.
 
-[#20_81]*[20.81]* Withdrawals are listed in the Reinforcement Schedule. They are
+[#20_81]
+*[20.81]* Withdrawals are listed in the Reinforcement Schedule. They are
 listed as either actual units or as types of units (e.g., "Withdraw any two
 Armor Brigades").
 
-[#20_82]*[20.82]*. When a Withdrawal is listed by type, the unit chosen for
+[#20_82]
+*[20.82]*. When a Withdrawal is listed by type, the unit chosen for
 Withdraw! must be at 75% maximum TOE Strength (at least), or, if no units are up
 to that level, the highest TOE Strength-level unit of its type available.
 
-[#20_83]*[20.83]* Units to be Withdrawn must be moved to Cairo or Alexandria on
+[#20_83]
+*[20.83]* Units to be Withdrawn must be moved to Cairo or Alexandria on
 or before the Game-Turn or Stage they are to be withdrawn. If they are not
 present or at required TOE Strength (<<20_75>>) by that time, they are eliminated.
 (This is a play mechanism to forestall procrastination.) Units so eliminated may
 not return (as many Withdrawls do, later in the game).
 
-[#20_84]*[20.84]* Once the units have reached Cairo or Alexandria, they are
+[#20_84]
+*[20.84]* Once the units have reached Cairo or Alexandria, they are
 simply removed from play.
 
-[#20_85]*[20.85]* If a unit scheduled for Mandatory Withdrawal is less than 75%
+[#20_85]
+*[20.85]* If a unit scheduled for Mandatory Withdrawal is less than 75%
 TOE Strength, it must be brought up to that level by Replacement Points before
 Withdrawal Date (see Case <<20_82>>) or an equivalent substitute unit of similar
 type that is at least at 75% TOE strength.
