--- a/section-26.adoc
+++ b/section-26.adoc
@@ -16,53 +16,63 @@ CASES:
 [#26_1]
 === TYPES OF MINEFIELDS
 
-[#26_11]*[26.11]* There are two types of minefields: dummy and real, All
+[#26_11]
+*[26.11]* There are two types of minefields: dummy and real, All
 minefield counters have the same front side; the reverse side of the counter
 reveals whether it is real or dummy.
 
-[#26_12]*[26.12]* In moving units there is also a difference between Friendly
+[#26_12]
+*[26.12]* In moving units there is also a difference between Friendly
 minefields — paths through which are known (hopefully) — and Enemy minefields.
 
-[#26_13]*[26.13]* Real minefields may be removed by having an Engineer unit — or
+[#26_13]
+*[26.13]* Real minefields may be removed by having an Engineer unit — or
 a unit with Engineer capability — spend one full Operations Stage in the hex
 (i.e., the Engineer must start the Operations Stage in the hex with the
 minefield). If it expends no Capability Points on movement and remains in the
 hex at the end of the Stage, the minefield is removed. This applies to both
 Friendly and Enemy minefields.
 
-[#26_14]*[26.14]* Dummy Minefields are removed at the end of any Movement
+[#26_14]
+*[26.14]* Dummy Minefields are removed at the end of any Movement
 Segment in which an Enemy unit expends the Capability Points to move into that
 hex (see Case<<26_23>>.
 
-[#26_15]*[26.15]* A Friendly minefield is flipped over to reveal its type (real
+[#26_15]
+*[26.15]* A Friendly minefield is flipped over to reveal its type (real
 or dummy) immediately upon being entered by an Enemy unit.
 
 [#26_2]
 === EFFECTS OF MINEFIELDS
 
-[#26_21]*[26.21]* The movement costs to enter a minefield are in the Terrain
+[#26_21]
+*[26.21]* The movement costs to enter a minefield are in the Terrain
 Effects Chart, 8.37. It should be pointed out that a motorized unit or vehicle
 entering an Enemy minefield expends Capability Points proportional to its given
 Capability Point Allowance, Thus, an artillery unit would expend 15 Capability
 Points to enter an Enemy minefield.
 
-[#26_22]*[26.22]* All movement costs are in addition to the terrain in the hex.
+[#26_22]
+*[26.22]* All movement costs are in addition to the terrain in the hex.
 Note: Units without Engineers will expend points far over their CPA.
 
-[#26_23]*[26.23]* The costs to enter a dummy minefield are the same as those for
+[#26_23]
+*[26.23]* The costs to enter a dummy minefield are the same as those for
 a real minefield. The only difference is that once a unit enters an Enemy dummy
 minefield, that minefield is revealed.  However, it is not removed until the end
 of that Movement Phase of the Operations Stage. Thus, any units that move into
 that dummy minefield in that Phase of Movement still pay the cost to entera
 minefield.
 
-[#26_24]*[26.24]* Engineer units and combat units stacked with an Engineer
+[#26_24]
+*[26.24]* Engineer units and combat units stacked with an Engineer
 battalion or Commonwealth HQs with Engineering capacity pay only four additional
 Capability Points to enter an Enemy minefield, rather than their listed cost.
 Engineer units and combat units stacked with an Engineer battalion pay no extra
 cost to enter a Friendly minefield.
 
-[#26_25]*[26.25]* Whenever a vehicle (tank, truck, etc.)  enters an Enemy
+[#26_25]
+*[26.25]* Whenever a vehicle (tank, truck, etc.)  enters an Enemy
 minefield not accompanied by an Engineer battalion, or Commonwealth HQs with
 Engineering capacity, there is a possibility that the minefield will destroy
 some of the vehicles. The moving Player rolls one die for each battalionsized
@@ -70,7 +80,8 @@ some of the vehicles. The moving Player rolls one die for each battalionsized
 rolls a 5 or 6, the mines have destroyed one TOE Strength Point of tanks or
 motorized infantry, or one unattached Truck Point.
 
-[#26_26]*[26.26]* On any anti-tank or close assault combat in which the
+[#26_26]
+*[26.26]* On any anti-tank or close assault combat in which the
 attacking units are in an Enemy minefield or in which there is a Close Assault
 against an Enemy unit in an Enemy Minefield, the defending Player adjusts all
 columns one in his favor. This does not apply to artillery bombardment.
