--- a/section-29.adoc
+++ b/section-29.adoc
@@ -49,23 +49,28 @@ effects of such weather are already built into the system.
 [#29_3]
 === HOT WEATHER
 
-[#29_31]*[29.31]* When hot weather occurs, it occurs on ail sections of all
+[#29_31]
+*[29.31]* When hot weather occurs, it occurs on ail sections of all
 game-maps.
 
-[#29_32]*[29.32]* When undergoing construction, the sites, exclusive of the
+[#29_32]
+*[29.32]* When undergoing construction, the sites, exclusive of the
 requirements of units there, require water rations (see Case <<24_21>> in hot
 weather.
 
-[#29_33]*[29.33]* When determining Breakdown during hot weather, adjust the.
+[#29_33]
+*[29.33]* When determining Breakdown during hot weather, adjust the.
 Breakdown Column one column higher (to the right), see Case <<21_37>>.
 
-[#29_34]*[29.34]* If the weather is hot, all Fuel and Water Levels (not
+[#29_34]
+*[29.34]* If the weather is hot, all Fuel and Water Levels (not
 including water in wells or oases) are reduced by five per-cent (5%). This
 includes water and fuel in dumps as well as in trucks. However, do not count the
 water/gas actually being consumed by a unit (in the radiators and gas tanks, as
 it were.) This is done during the Weather Determination Phase.
 
-[#29_35]*[29.35]* During hot weather, water requirements for all units are doubled.
+[#29_35]
+*[29.35]* During hot weather, water requirements for all units are doubled.
 
 [#29_4]
 === SANDSTORMS
@@ -74,27 +79,34 @@ Sandstorms are whirling maelstroms of grit and dust, blinding personnel and
 clogging machinery for days. Visibility falls to zero, and all action comes to a
 virtual standstill. Most men preferred combat to the raging sandstorms.
 
-[#29_41]*[29.41]* Sandstorms occur only on certain sections of the game-map, as
+[#29_41]
+*[29.41]* Sandstorms occur only on certain sections of the game-map, as
 per the Weather Table <<29_6>>.  Regardless of where a sandstorm occurs, it
 mever occurs over delfa hexes (Game-Map E). The Weather for game-maps on which
 there is no sandstorm is normal.
 
-[#29_42]*[29.42]* No construction may occur in a hex in which there is a
+[#29_42]
+*[29.42]* No construction may occur in a hex in which there is a
 sandstorm (see Case <<24_22>>).
 
-[#29_43]*[29.43]* No aircraft may fly into or out of a hex with a sandstorm.
+[#29_43]
+*[29.43]* No aircraft may fly into or out of a hex with a sandstorm.
 
-[#29_44]*[29.44]* All movement costs for hexes with a sandstorm are doubled.
+[#29_44]
+*[29.44]* All movement costs for hexes with a sandstorm are doubled.
 
-[#29_45]*[29.45]* If a unit expends 50% or more of its Capability Points for
+[#29_45]
+*[29.45]* If a unit expends 50% or more of its Capability Points for
 movement in sandstorm hexes during a given Movement Phase, the Player adjusts
 his Breakdown Point column one higher (to the right) when rolling for breakdown
 (see Case <<21_37>>).
 
-[#28_46]*[28.46]* Sandstorms do not extend out into the Mediterranean (they stop
+[#28_46]
+*[28.46]* Sandstorms do not extend out into the Mediterranean (they stop
 in the coastal hexes).
 
-[#29_47]*[29.47]* Sandstorms may damage Grounded Aircraft (see Case <<38_5>>)
+[#29_47]
+*[29.47]* Sandstorms may damage Grounded Aircraft (see Case 38.5)
 
 [#29_5]
 === RAINSTORMS
@@ -104,29 +116,37 @@ from the blessing of having water, these rainstorms often wreaked havoc on
 movement, turning roads into morasses of mud and flooding heretofore empty wadis
 with swollen — and deep — rivers of rainwater.
 
-[#29_51]*[29.51]* Rainstorms occur only on certain gamemaps; see the Weather
+[#29_51]
+*[29.51]* Rainstorms occur only on certain gamemaps; see the Weather
 Table <<29_6>>. Any gamemap that does not have a rainstorm has normal weather.
 
-[#29_52]*[29.52]* No aircraft may fly into or out of a rainstorm hex. Note:
+[#29_52]
+*[29.52]* No aircraft may fly into or out of a rainstorm hex. Note:
 Rainstorms do extend to the northern edge of the map; i.e., into the
 Mediterranean,
 
-[#29_53]*[29.53]* All depleted wells are filled during a rainstorm.
+[#29_53]
+*[29.53]* All depleted wells are filled during a rainstorm.
 
-[#29_54]*[29.54]* No construction may occur during a rainstorm (see
+[#29_54]
+*[29.54]* No construction may occur during a rainstorm (see
 Case <<24_22>>.
 
-[#29_55]*[29.55]* All wadi hexsides are uncrossable during a rainstorm, except
+[#29_55]
+*[29.55]* All wadi hexsides are uncrossable during a rainstorm, except
 by Roads (see Case <<29_56>>.  Players may not use wadis to draw water.
 
-[#29_56]*[29.56]* All road hexes have the same Movement Cost and Breakdown Rate
+[#29_56]
+*[29.56]* All road hexes have the same Movement Cost and Breakdown Rate
 as tracks during rainstorms. Tracks, themselves, remain as tracks, with the
 exception of Case <<29_55>>.
 
-[#29_57]*[29.57]* All river hexsides not crossed by roads or railroads are
+[#29_57]
+*[29.57]* All river hexsides not crossed by roads or railroads are
 impassable.
 
-[#29_58]*[29.58]* No vehicle or motorized unit may enter a delta hex, unless it
+[#29_58]
+*[29.58]* No vehicle or motorized unit may enter a delta hex, unless it
 is on a road or railroad. Units in a delta hex at the start of a rainstorm must
 remain there for that Operations Stage, unless they are on aroad or railroad.
 
