--- a/section-54.adoc
+++ b/section-54.adoc
@@ -15,20 +15,24 @@ CASES:
 [#54_1]
 === SUPPLY DUMPS
 
-[#54_11]*[54.11]* Supply dumps are used to hold large amounts of supplies —
+[#54_11]
+*[54.11]* Supply dumps are used to hold large amounts of supplies —
 ammunition, fuel, stores, and water — in places that can be easily reached and
 used by combat units. Any hex can be used as a supply dump, and all major cities
 are natural supply dumps.
 
-[#54_12]*[54.12]*. Dummy supply dumps hold no supplies.  They are revealed only
+[#54_12]
+*[54.12]*. Dummy supply dumps hold no supplies.  They are revealed only
 when an Enemy unit enters the hex or bombs/strafes it. The Dummy supply counter
 is removed upon revelation.
 
-[#54_13]*[54.13] Supply Dump Capacity Chart*
+[#54_13]
+*[54.13] Supply Dump Capacity Chart*
 
 (see Charts and Tables)
 
-[#54_14]*[54.14]* Players may attempt to "blow" supply dumps and their supplies.
+[#54_14]
+*[54.14]* Players may attempt to "blow" supply dumps and their supplies.
 Only non-gun units may attempt to blow dumps. Only one Phasing unit per hex may
 attempt to blow a particular dump per Player-Turn. To blow a dump, the
 attempting Player must expend Capability Points equal to one-third (rounded
@@ -48,16 +52,19 @@ before combat. The Player may only expend one-third of the unit's basic CPA and
 must vacate the hex regardless of the result. Supply Dumps may be blown in any
 segment of an OpStage.
 
-[#54_15]*[54.15]* Dumps may be used by any Player as supply sources. The supply
+[#54_15]
+*[54.15]* Dumps may be used by any Player as supply sources. The supply
 dump counters have ID numbers on them so that the Player may facilitate
 record-keeping, including which dumps are Dummies.
 
-[#54_16]*[54.16]* It is suggested that Players set up their dumps so that each
+[#54_16]
+*[54.16]* It is suggested that Players set up their dumps so that each
 is within a one-OpStage truck ride (including loading and unloading time) from
 the next. Otherwise you are asking for trouble.  Establishing a viable dump
 network should be top priority for logistics commanders.
 
-[#54_17]*[54.17] Supply Dump Demolition Table*
+[#54_17]
+*[54.17] Supply Dump Demolition Table*
 
 (see Charts and Tables)
 
@@ -77,26 +84,31 @@ task.
 [#54_3]
 === THE COMMONWEALTH RAILROAD: Supplies
 
-[#54_31]*[54.31]* As stated previously, the Commonwealth railroad may be used to
+[#54_31]
+*[54.31]* As stated previously, the Commonwealth railroad may be used to
 move personnel in any direction. It may also be used to move supplies. It may
 move either supplies or personnel — it cannot move both at the same time.
 
-[#54_32]*[54.32]* The Commonwealth supply capacity of the railroad is 1500 tons
+[#54_32]
+*[54.32]* The Commonwealth supply capacity of the railroad is 1500 tons
 per Operations Stage in either direction. The RR may move personnel in one
 direction and supplies in another. Players should check the various Sections on
 supplies to see the equivalent weight in tons for each type of supply.
 
-[#54_33]*[54.33]* The railroad may transport only one type of supply at a given
+[#54_33]
+*[54.33]* The railroad may transport only one type of supply at a given
 time. It may move fuel, ammunition, or stores — not any combination of the
 three. (Water need not be transported by RR — the railroad hexes are pipelines
 in and of themselves.)
 
-[#54_34]*[54.34]* For the duration of one Operations Stage per month (calendar
+[#54_34]
+*[54.34]* For the duration of one Operations Stage per month (calendar
 month), the railroad may not be used for anything. It is transporting water
 forward for railroad use. Players must state each month which Operations Stage
 they are not using the railroad.
 
-[#54_35]*[54.35]* Like personnel, supplies may be moved from any one spot and
+[#54_35]
+*[54.35]* Like personnel, supplies may be moved from any one spot and
 dumped in another spot.  Supplies are considered unloaded when they reach a
 specific hex. They may not be moved that Operations Stage.
 
@@ -108,15 +120,18 @@ extending from Egypt to Libya (the Commonwealth railroad system). In essence, he
 must control the rail hexes and he must import rolling stock. Remember, the
 Barce railroad east of Benghazi is not usable under any conditions.
 
-[#54_41]*[54.41]* At any time the Axis player controls five or more continguous
+[#54_41]
+*[54.41]* At any time the Axis player controls five or more continguous
 rail hexes he may use such rail hexes to transport equipment and personnel.  To
 control a rail hex the Axis player must be the last player to have a land combat
 unit of any type pass through that hex.
 
-[#54_42]*[54.42]* The Axis Player may never build new rail line. However, he may
+[#54_42]
+*[54.42]* The Axis Player may never build new rail line. However, he may
 repair rail hexes he controls at the same rate as the Commonwealth Player.
 
-[#54_43]*[54.43]* To make use of controlled Commonwealth Raillines the Axis
+[#54_43]
+*[54.43]* To make use of controlled Commonwealth Raillines the Axis
 Player must convoy Rolling Stock (locomotives, tenders, stock cars, flat cars,
 etc.) from Europe to Africa. For each 250 Stores and 100 Fuel Points that the
 Axis Player imports to Africa and brings to any controlled and operative rail
@@ -124,17 +139,20 @@ hex he may activate all such hexes under his control (as long as they are
 contiguous) to the extent of hauling 300 Tons of Supplies in any one direction
 during an Operations Stage.  (Rail movement occurs in the Convoy Stage).
 
-[#54_44]*[54.44]* In order to transport one Stacking Point of any.type of unit
+[#54_44]
+*[54.44]* In order to transport one Stacking Point of any.type of unit
 the Axis Player must have active enough Rolling Stock to transport thé
 equivalent of 900 Tons of Supplies in any one direction.
 
-[#54_45]*[54.45]* Once Stores and Fuel is applied as Rolling Stock the points
+[#54_45]
+*[54.45]* Once Stores and Fuel is applied as Rolling Stock the points
 are used up; they may not be recovered. If at any time the Axis Player loses
 control of enough rail hexes so that he does not have the necessary five
 contiguous hexes the Rolling Stock is considered to have been destroyed.  The
 Axis may not use Commonwealth Stock, nor vice versa.
 
-[#54_46]*[54.46]* All rules concerning the movement of troops/supplies and the
+[#54_46]
+*[54.46]* All rules concerning the movement of troops/supplies and the
 use of the railroad that ap ply to the Commonwealth apply equally to the Axis.
 
 [#54_5]
