--- a/section-56.adoc
+++ b/section-56.adoc
@@ -20,34 +20,40 @@ CASES:
 [#56_1]
 === THE SHIPPING LANES
 
-[#56_11]*[56.11]* There are six Shipping Lanes in CNA, representing the various
+[#56_11]
+*[56.11]* There are six Shipping Lanes in CNA, representing the various
 routes taken by Axis convoys. The Shipping Lanes are not printed on the game map
 but rather are identified by their ports of origin and destination (see the Axis
 Naval Convoy Air Distance Chart).
 
-[#56_12]*[56.12]* An Axis convoy is defined as the total tonnage assigned to a
+[#56_12]
+*[56.12]* An Axis convoy is defined as the total tonnage assigned to a
 Shipping Lane during a GameTurn. The Axis Player may have as many as six convoys
 or as few as one during any Game-Turn.  The Axis Player is restricted to the
 listed ports of origin and destination combinations (i.e., he may not create
 additional shipping lanes).
 
-[#56_13]*[56.13]* Axis Naval Convoys may be attacked by Commonwealth bombers
+[#56_13]
+*[56.13]* Axis Naval Convoys may be attacked by Commonwealth bombers
 (see Axis Naval Convoy Strategic Bombing, <<41_6>>). The Axis Player must
 therefore balance the risks in having a convoy arrive close to the front,
 thereby placing it within range of a greater number of Commonwealth N.  African
 based planes or having it arrive far in the rear, trading time and supply
 expenditures for safety.
 
-[#56_14]*[56.14]* Shipping lanes 4 and 5 (the routes originating from Greece)
+[#56_14]
+*[56.14]* Shipping lanes 4 and 5 (the routes originating from Greece)
 may not be used until the second Game-Turn of May, 1941. See also Case <<55_17>>.
 
-[#56_15]*[56.15]* All Axis convoys are assigned to a specific shipping lane in
+[#56_15]
+*[56.15]* All Axis convoys are assigned to a specific shipping lane in
 the Axis Convoy Planning Phase.  The lane assignment may not be changed,
 regardless of any changes in the positions of the land units, with one
 exception: a convoy scheduled to arrive at a port that is captured by the
 Commonwealth is cancelled. It never sails.
 
-[#56_16]*[56.16]* The Axis Player notes on his Convoy Control Sheet what he is
+[#56_16]
+*[56.16]* The Axis Player notes on his Convoy Control Sheet what he is
 shipping and through which lane. If that shipping lane is not attacked by
 Commonwealth planes, all items arrive at their designated port (which is stated
 as part of the lane). If the lane is under bombardment, the Axis Player totals
@@ -56,7 +62,8 @@ that convoy. Thus 15,000 tons of shipping would amount to 15 Flak/AA Points with
 which to fire at Commonwealth planes. Any losses are taken as per the strategic
 bombardment rules.
 
-[#56_17]*[56.17]* There is no limit to the tonnage that can be carried by a
+[#56_17]
+*[56.17]* There is no limit to the tonnage that can be carried by a
 convoy in a given lane, except as noted in Case <<56_2>>.
 
 [#56_2]
@@ -73,7 +80,8 @@ availability of supplies in Italy, and a whole host of other problems. Thus the
 rules below reflect the arrival of Axis supplies as they actually occurred
 (within the parameters of the rules).
 
-[#56_21]*[56.21]* Axis shipping of supplies by naval convoy uses several charts,
+[#56_21]
+*[56.21]* Axis shipping of supplies by naval convoy uses several charts,
 under the heading of the Axis Naval Convoy Level Chart. The Axis Convoy Capacity
 Table refers the Axis Player, by month and year, to the Tonnage Capacity Table
 for that particular month. The figures given on the Tonnage Determination Table
@@ -88,10 +96,11 @@ Axis Player always plans his convoys one Game-Turn prior to actually sending
 them out.)  The Axis Monthly Shipping Table tells the Axis Player to use row E
 on the Tonnage Capacity Table for November 1941. The Player refers to that Table
 and column and rolls a die; he rolls a 4.  That means he may ship 21,000 tons of
-supplies and Replacement Points (see <<20_00>>) on GameTurn 55. The choice of
+supplies and Replacement Points (see <<20_0>>) on GameTurn 55. The choice of
 shipping lane and destination is up to him.
 
-[#56_22]*[56.22]* Having determined the allowable tonnage for a given Game-Turn,
+[#56_22]
+*[56.22]* Having determined the allowable tonnage for a given Game-Turn,
 the Axis Player may now plan to ship any amounts (within the limits of allowable
 tonnage) of. fuel, ammunition, and stores that he wishes. They are available
 (for game purposes) in unlimited quantities in Europe. For example, with those
@@ -99,7 +108,8 @@ tonnage) of. fuel, ammunition, and stores that he wishes. They are available
 decide to ship out 10,000 tons of fuel, 10,000 tons of ammunition, and 1000 tons
 of stores.
 
-[#56_23]*[56.23]* The tonnage equivalencies of supplies are listed on the
+[#56_23]
+*[56.23]* The tonnage equivalencies of supplies are listed on the
 Equivalent Weight Chart  <<54_5>>) [#36_24]*[36.24]* The Axis Player may also
 have planned previously (see Case <<20_6>>) to ship replacements from
 Italy/Greece. These take up space and weight, and their tonnage equivalencies
@@ -110,19 +120,23 @@ tonnage. Thus if the Axis Player had planned to send 10 Infantry Points in the
 Game-Turn 55 convoys, this would subtract 300 tons from the available tonnage
 for that Game-Turn.
 
-[#56_25]*[56.25]* After determining what tonnage he has available and what he
+[#56_25]
+*[56.25]* After determining what tonnage he has available and what he
 wishes to ship, the Axis Player then, at the same time, allocates his available
 tonnage to the lanes — and ports — he wants them to use. He cannnot change lanes
 and destinations once chosen (see Case <<56_1>>).
 
-[#56_26]*[56.26]* Axis convoys — and their cargoes — may undergo Commonwealth
+[#56_26]
+*[56.26]* Axis convoys — and their cargoes — may undergo Commonwealth
 bombardment.
 
-[#86_27]*[86.27]* The Axis Player should remember that ports have maximum
+[#86_27]
+*[86.27]* The Axis Player should remember that ports have maximum
 capacities; they may not receive supplies over that capacity (see Case
 <<55_3>>).
 
-[#56_28]*[56.28]* Supplies and personnel are unloaded the instant of their
+[#56_28]
+*[56.28]* Supplies and personnel are unloaded the instant of their
 arrival, (if possible) and they may be used immediately. All ports of arrival
 (e.g., Tripoli, Bizerta, Tobruk) are considered to have supply dumps built in,
 as it were.
@@ -134,24 +148,29 @@ The Axis had a small fleet of boats that they used for coastal transfer of small
 amounts of supplies.  These were old shipping boats and aging tramp steamers
 that could ill afford to venture too far from land. They havea limited capacity.
 
-[#56_31]*[56.31]* Axis coastal shipping is represented by several ship counters.
+[#56_31]
+*[56.31]* Axis coastal shipping is represented by several ship counters.
 Each ship counter has its tonnage capacity printed on it. Each ship has a CPA —
 for movement only — of 50. Each sea hex costs one point.
 
-[#56_32]*[56.32]* Axis coastal shipping moves in the Truck Convoy Phase, and
+[#56_32]
+*[56.32]* Axis coastal shipping moves in the Truck Convoy Phase, and
 on/y in that Phase.
 
-[#56_33]*[56.33]* Axis coastal ships cannot be attacked from air or land. They
+[#56_33]
+*[56.33]* Axis coastal ships cannot be attacked from air or land. They
 may not enter a port that has been neutralized (Capacity Level of zero).  They
 may also never enter an Enemy-occupied port.
 
-[#56_34]*[56.34]* To use coastal shipping, the Axis Player loads supplies (xo
+[#56_34]
+*[56.34]* To use coastal shipping, the Axis Player loads supplies (xo
 personnel) on his boats at the Beginning of the Truck Convoy Phase (at a cost of
 5 CPs) and then moves the boat. Unloading supplies costs 5 CPs. Only one type of
 cargo may be carried at any one time by any one ship. Tanks, guns, etc., may not
 be shipped via coastal shipping
 
-[#56_35]*[56.35]* Coastal ships may stop and unload in one port and then
+[#56_35]
+*[56.35]* Coastal ships may stop and unload in one port and then
 continue on to another port, etc., as long as they do not exceed their CPA.
 Coastal ships do not require fuel.
 
